标题序号补充

--- a/我再也不会把孩子送去学校/11.Optimum push zone.md
+++ b/我再也不会把孩子送去学校/11.Optimum push zone.md
@@ -1,4 +1,4 @@
-# Optimum push zone
+# 11 Optimum push zone
 
 **Optimum push zone** is a range of minimum outside pressure that makes the child develop better than without external influences. For example, competition with other children may encourage harder work. Naturally, external pressure may also result in regression. Progress may also occur at levels of pressure that are greater than necessary to achieve the same level of improvement. The push zone is defined on long-term outcomes, which are very different from short-term outcomes.
 
@@ -6,13 +6,13 @@
 
 > **Figure:** **\*Optimum push zone** (in blue) is the range of external pressure that is likely to improve learning outcomes. If the pressure increases beyond the push zone, the learning outcomes decrease. At some point, instead of more learning, pressure will result in less learning (**regress zone** in black). Schooling results in increased tolerance for coercion via learned helplessness (in green). It also decreases the learning outcomes and increases the required level of coercion*
 
-## Push zone at school
+## 11.1 Push zone at school
 
 The **optimum push zone** is usually far narrower than it is popularly assumed. The whole system of [coercive education](https://supermemo.guru/wiki/Coercion_in_learning) exerts pressures that go wildly beyond the optimum in most cases. This comes from the illusion of progress created by short-term outcomes. Excessive pressure slows down long-term development of children or results in regression in comparison to what would be achieved without schooling. Pressure is the key factor that explains [why kids hate school](https://supermemo.guru/wiki/Why_kids_hate_school).
 
 Focus on short-term outcomes in schooling results in pressures extending well beyond the optimum push zone
 
-## Zone of proximal development
+## 11.2 Zone of proximal development
 
 **Zone of proximal development (ZPD)** was defined by [Vygotski](https://en.wikipedia.org/wiki/Lev_Vygotsky) as the optimum guidance zone in which a student can master harder material or skills with a degree of guidance from a tutor. Zone of proximal development is often discussed in education. It may fit classroom situations, however, it does not extend into [self-directed learning](https://supermemo.guru/wiki/Self-directed_learning).
 
@@ -24,7 +24,7 @@ Zone of proximal development (ZPD) is defined on the space of positive forces (h
 
 ZPD focuses on immediate outcomes, while the push zone focuses on **long-term outcomes**. In ZPD, we investigate the impact of help and guidance, while in the push zone, we look at external pressure affecting [self-directed](https://supermemo.guru/wiki/Self-directed_learning) trajectory. This pressure does not need to involve help in learning. However, it should affect the expected trajectory outcome as predicted by "the pusher". For example, putting a time limit on gaming or TV time would be a form of external pressure that may match the optimum push zone. Naturally, external pressure works best if it happens in a framework of mutual consent.
 
-## Push zone and coercion
+## 11.3 Push zone and coercion
 
 Throughout this [book](https://supermemo.guru/wiki/Problem_of_Schooling), I depict the dangers of [coercion in learning](https://supermemo.guru/wiki/Coercion_in_learning). The existence of the push zone is not an indication that coercion is valuable. When a parent pressures a kid to take on learning by means of persuasion, it is also a push that is not coercive. As long as the kid can back off or ignore the pressure, it will not count as coercion.
 
@@ -32,11 +32,11 @@ Moreover, the pressure is not supposed to push the kid into learning and to sust
 
 The push should transfer a kid from one area of high [learntropy](https://supermemo.guru/wiki/Learntropy) to another area of high learntropy. It should not [push the kid into unpleasant learning](https://supermemo.guru/wiki/Fundamental_law_of_learning)!
 
-## Comfort zone
+## 11.4 Comfort zone
 
 When there is little pressure or distraction, a student may operate in a **comfort zone**, in which she predominantly develops on her own using [self-paced](https://supermemo.guru/wiki/Self-paced_learning)and [self-directed learning](https://supermemo.guru/wiki/Self-directed_learning). Depending on the child, the subject domain, and the environment, the comfort zone may bring fantastic outcomes (e.g. when pursuing an ambitious passion or hobby) or a developmental regression (e.g. in various form of dependence, e.g videogames, social media, peers, etc.). For many kids, development in the comfort zone is ruined by environmental distractions (e.g. difficult situation at home). Most of kids attending school quickly regress to a point where operations in the comfort zone lead to little or no progress. In that sense, external pressures can shift the push zone in the direction where more pressure is needed to obtain positive outcomes. In extreme cases, the child may regress via [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness) into a total loss of the [learn drive](https://supermemo.guru/wiki/Learn_drive). This is the main underlying cause for which [kids hate school](https://supermemo.guru/wiki/Why_kids_hate_school%3F).
 
-## Regress zone
+## 11.5 Regress zone
 
 **Regress zone** is where the pressure brought in by the tutor will have an overall negative impact on development. Regress zone is particularly extensive in small children. [Early academic instruction](https://supermemo.guru/wiki/Abandon_early_math_instruction!) may backfire in the long term even if it is not highly coercive. This is why early school age is harmful.
 
@@ -48,7 +48,7 @@ Many tools used in schooling tend to operate in the regress zone despite providi
 
 One of the greatest dangers of teaching is the illusion in which positive short-term effects obscure negative long-term outcomes
 
-## The optimum push
+## 11.6 The optimum push
 
 If we take the axis of influence from negative to positive infinity as defined for any type of external pressure, the optimum push zone will lie between the comfort zone, with some overlap, and the regress zone. The part of the curve with positive outcomes will be divided into two portions: the optimum push zone, and the zone of progress where the same outcomes are achieved at higher pressure.
 
@@ -61,7 +61,7 @@ Long-term learning outcomes define the boundaries:
 - **push zone**: produces positive outcomes compared with the comfort zone. There is a dramatic increase in value at little pressure (high return on low investment of teaching, tutoring, mentoring, etc.). The optimum usually falls at very low levels of pressure (might be much higher for some kids). There is a quick decline in development speed in the zone where adding pressure diminishes outcomes. The optimum push zone is richest in the sense of accomplishment, and provides for a cumulative increase in enthusiasm, passion, interest, and knowledge. This is the zone that marks the best brain growth
 - **regress zone**: too much pressure results in regress. The pressure may have a form of the stress of schooling, cram schools, excess [homework](https://supermemo.guru/wiki/Homework), parental blackmail, anger, etc. The end result is stress, bad sleep, bad health, frustration, hating school, hating learning, hating a subject, hating the world, or hating oneself
 
-## Zone changes
+## 11.7 Zone changes
 
 The delineations and sizes of the zones change in time. In each child, the optimum push zone will differ for different tasks and different contexts. Over time, the zone may change for the same child, the same task and, the same context. In particular, the context of [home](https://supermemo.guru/wiki/Homeschooling), free [democratic school](https://supermemo.guru/wiki/Democratic_school), or a typical school will redefine the zone.
 
@@ -69,7 +69,7 @@ Learning expands knowledge, which improves outcomes in the comfort zone. It may 
 
 The comfort zone may regress in size in adverse circumstances. The regress zone may contract the push zone. For example, a child operating in conditions of school stress may develop an aversion to learning that will produce more dramatic reactions to all forms of external pressure. In a similar fashion, the comfort zone may shrink. On school-free days, the kid may compensate limits on freedom by losing itself in videogames. Via [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness), the regress zone may also expand the optimum push zone by changing pain boundaries, however, it may also stunt the outcomes. This is why schooling still brings positive effects for an average child. Where regressive pressure might do damage at first, it gradually induces learning apathy, and kids forced to go through the motions of schooling will still register some knowledge and pass basic test benchmarks. Those benchmarks are always set way below a child's true potential (for example, see: [Schools are useless in teaching English](https://supermemo.guru/wiki/Schools_are_useless_in_teaching_English))
 
-## Correcting development trajectory
+## 11.8 Correcting development trajectory
 
 The optimum nudge in the push zone will not only depend on the marginal effect on development. It can also be helpful in overcoming an acceleration threshold, where a small penalty can lead to a wider space of potential acceleration. For example, a kid may be reluctant to switch from a typical computer game to an educational computer game. The latter may require a switch, or a switch and some introductory learning. By guiding the child over the little area of discomfort, further acceleration becomes easy.
 
@@ -77,13 +77,13 @@ It is always safer to operate in the push zone close to the comfort zone. The di
 
 All forms of pressure get registered as long-term memories. Repeated pressure works along the principles of [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition). Small errors will get magnified if they get repeated. This is how the hate of learning develops. This is how [toxic memories](https://supermemo.guru/wiki/Toxic_memories) get entrenched. This is why all forms of over-correction must be compensated with long "resting periods" to let [forgetting](https://supermemo.guru/wiki/Forgetting) do its clean up job. This is why all erroneous forays into the regress zone bear the extra cost of recovery in the comfort zone. Kids who switch from a standard school to a [democratic school](https://supermemo.guru/wiki/Democratic_school) often need long periods of "detox" to become self-reliant and creative again.
 
-## Changes to push zone with age
+## 11.9 Changes to push zone with age
 
 As kids grow older, their personality changes and the inner world gets more complex in proportion to the impact of life adversities. This makes all forms of external optimization harder. The push zone may shrink for kids who grow to love self-determination. The perceived optimum push zone will also shrink due to the complexity of interactions. In other words, the older the kid, the less pushing is needed or welcome. This marks a gradual transition from a child to a free-minded adult. However, intense schooling may have the opposite effect. Teens who have lived a life determined by instructions from others, lose their own initiative. They need to be pushed. This is how schooling can shift the entire optimum push zone in the direction of high pressure. The need to push may keep growing from year to year. Through unceasing coercion, we shift children from curiosity powered by the [learn drive](https://supermemo.guru/wiki/Learn_drive), to [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness) and apathy. The most extreme outcomes of that transition are depression, addictions, and even suicide.
 
 The unceasing pressure of schooling may result in a constant need to increase pressure to achieve the same outcomes
 
-## Complexities of influence
+## 11.10 Complexities of influence
 
 Here are some departures from the simple push zone formula:
 
@@ -94,7 +94,7 @@ Here are some departures from the simple push zone formula:
 
 The simple model of the push zone can be greatly interfered with by parents, school, environment, health, and personality traits. Under pressure of schooling, kids can easily unravel into more complex behaviors where a whole constellation of emotions makes reactions difficult to predict. Even one day's [sleep deficit](https://supermemo.guru/wiki/Sleep_deprivation) can make a world of difference. Sometimes, when the outcome is unsure, the kid would probably be best left to her own devices for a while.
 
-## Predictability of a push
+## 11.11 Predictability of a push
 
 In many circumstances, it is impossible to predict the exact effects of a push.
 
@@ -103,7 +103,7 @@ There are still two chief lessons from the model:
 - the push zone can be microscopic. It requires extreme caution. The smarter the kid, the more assertive the kid, the smaller the zone
 - employment of the concept requires a good understanding of a particular child. This job can be hard even for an attentive parent. It verges onto impossible in a class of twenty, esp. with a large rotation of teachers who never have much time to get to know individual kids
 
-## Push zone: examples
+## 11.12 Push zone: examples
 
 This [book](https://supermemo.guru/wiki/Problem_of_Schooling) discusses a number of learning situations that apply to different push zones. Some examples:
 
@@ -116,29 +116,17 @@ This [book](https://supermemo.guru/wiki/Problem_of_Schooling) discusses a number
 - my interest in programming and in [SuperMemo](https://supermemo.guru/wiki/SuperMemo)helped me drag myself from a regress zone of boring college to the optimum push zone where self-directed development was accelerated by a dose of external pressure. Instead of losing brain cells and sleep over the study of electronic circuits, [I was able to focus on programming, research, and SuperMemo](https://supermemo.guru/wiki/How_I_invented_perfect_schooling), while being constantly nudged to acceleration by the need to pass exam benchmarks (see: [My school tried to block the best thing in my life](https://supermemo.guru/wiki/Knowledge_valuation_network#Knowledge_valuation_that_affects_the_course_of_life))
 - what happens today to kids in war-torn Syria is the prime example of the extreme retrogress in conditions of [toxic stress](https://developingchild.harvard.edu/science/key-concepts/toxic-stress/). The impact of war on learning can extend over generations
 
-## Minimum pressure, maximum outcome
+## 11.13 Minimum pressure, maximum outcome
 
 The sizes of the push zones may differ wildly. The healthier the kid, the smarter the kid, the smaller the push zone. Teachers are required to be even-handed, and cannot set different rules for different kids. If they push too hard, they may do more harm than good. If they push too little, some needy kids may stop developing. If they find the optimum for the class, slower kids and the creative types will suffer.
 
 The key to my reasoning throughout this [book](https://supermemo.guru/wiki/Problem_of_Schooling) is that the cost of pushing can be microscopic (e.g. relative to the size of government investment in education). Kids are equipped with a natural [learn drive](https://supermemo.guru/wiki/Learn_drive). They are wired to learn and explore. They are innately curious. Their personality and environment are essential though. Some will need more pushing and those forces may need to increase over time. Others will show the exact opposite. They will welcome some assistance at younger ages and then they will display their "[rage to master](https://supermemo.guru/wiki/Rage_to_master)" that will power further development. It is the kids that enter the *rage to master* zone that will change the future of this planet! One of the [prime goals of education systems](https://supermemo.guru/wiki/Education_Reform) is to NOT stand in their way.
 
-## My own story
+## 11.14 My own story
 
 Personal anecdote. [Why use anecdotes?](https://supermemo.guru/wiki/Why_use_anecdotes%3F)
 
-I tried hard and cannot recall a single case where a significant push beyond my comfort zone brought any long-term benefits to my life. In
-
- 
-
-How I invented perfect schooling?
-
-, I write about enjoying passing exams. There is always a degree of discomfort in such a system. It is never truly perfect. However, I voluntarily joined the system, I self-imposed the learning, and I had a significant say in the
-
- 
-
-curriculum
-
-. In that period, the biggest coercive push I received was in the area of control theory.
+I tried hard and cannot recall a single case where a significant push beyond my comfort zone brought any long-term benefits to my life. In How I invented perfect schooling?, I write about enjoying passing exams. There is always a degree of discomfort in such a system. It is never truly perfect. However, I voluntarily joined the system, I self-imposed the learning, and I had a significant say in the curriculum. In that period, the biggest coercive push I received was in the area of control theory.
 
 I consider control theory highly important, however, at the time (1986), it was programming that was to [change my life](https://supermemo.guru/wiki/History_of_spaced_repetition). Delays in programming would mean delays in [SuperMemo](https://supermemo.guru/wiki/SuperMemo) which would mean delays in learning across the board. I also objected to the choice of material and the methods of lecturing.
 
@@ -148,8 +136,4 @@ Control theory is central to my work. It is central to [this book](https://super
 
 Sadly, the teaching methods, the classes, the lectures, the textbooks were not that good. I passed the exam. In my rebellion, I even resorted to cheating (possibly the only case in my whole life). During the exam, I was writing off solutions from [Krzysztof Biedalak](https://supermemo.guru/wiki/Krzysztof_Biedalak)'s sheet. The same Biedalak who is now CEO of [SuperMemo World](https://supermemo.guru/wiki/SuperMemo_World). He was always a bit more conscientious. That's why he is a CEO. I was always more rebellious. This is why I write these words.
 
-Conclusion:
-
- 
-
-I was never significantly pushed beyond my comfort zone with memorable long-term benefits!
+Conclusion: I was never significantly pushed beyond my comfort zone with memorable long-term benefits!
