--- a/我再也不会把孩子送去学校/13.Brain evolution.md
+++ b/我再也不会把孩子送去学校/13.Brain evolution.md
@@ -1,6 +1,6 @@
-# Brain evolution
+# 13 Brain evolution
 
-## Employing evolution
+## 13.1 Employing evolution
 
 Some smart people believe that evolution will help improve the brain to tolerate some of the challenges of the modern world. They are right. The evolution is an on-going process. However, the same smart people may tend to believe that pushing the brain to its limits has some evolutionary value. This thinking is extremely dangerous as it may justify the displeasure of learning in contradiction to the [fundamental law of learning](https://supermemo.guru/wiki/Fundamental_law_of_learning).
 
@@ -12,7 +12,7 @@ This is all based on poor understanding of evolution.
 
 For starters, evolution is a snail-slow process that takes generations to produce changes that are hard to notice. Why rely on evolution, when we can get results on a few orders of magnitude better by taking the opposite strategy: relieving the pressures. Take an average school-age kid, let it get some sleep, let it relax, activate the [learn drive](https://supermemo.guru/wiki/Learn_drive), let him follow the [natural creativity cycle](https://supermemo.guru/wiki/Natural_creativity_cycle), and in a few months you may get 500% gain in brain power. Don't Google to verify the number. 500% is just my wild shot. I look at unhappy gaunt kids around and I know that what they crave for is their best medicine: freedom, incl. [freedom to learn](https://supermemo.guru/wiki/Why_kids_hate_school%3F).
 
-## Genius of neural computation
+## 13.2 Genius of neural computation
 
 There is a dangerous point of ignorance behind the idea that pushing the limits is good for the evolution of the brain. At the root of the error in judgement is the unawareness of evolutionary marvels such as the [learn drive](https://supermemo.guru/wiki/Learn_drive), [memory optimization in sleep](https://supermemo.guru/wiki/Memory_optimization_in_sleep), [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition), and more. These are genius inventions of neural computing that cannot be improved using the concept of pushing the limits of brainwork.
 
@@ -22,7 +22,7 @@ This would actually result in evolution in reverse! If we eliminate sleep, we ki
 
 Moreover, all the push for bad sleep and bad learning would result in an epidemic of Alzheimer's disease. The garbage leftovers of excessive brainwork usually hit beyond the breeding age. This keeps senile dementia well protected from the reach of the evolution. Instead of having smarter students, we would have adults who would forget their own name by the time they were of my age.
 
-## Breeding perfect students
+## 13.3 Breeding perfect students
 
 It is a dream of every teacher to have an obedient, focused, and refreshed student who comes to school in time. Unfortunately, that dream is often realized with harmful means. Alarm clock ensures good timing. Modafinil improves alertness. Ritalin improves focus. Legal amphetamine, Adderall, improves both. [Learned helplessness](https://supermemo.guru/wiki/Learned_helplessness) leads to obedience. Instead of raising creative individuals, with this approach, we are raising intellectual zombies.
 
@@ -38,7 +38,7 @@ I wrote elsewhere that [resistance to chronic stress is not trainable](https://s
 
 Those who dream of turning brains into computers should be aware that soon the opposite will happen. Computers will mimic brains, and in the end, they will outsmart the smartest of us. Those future computers, as envisaged by [Jeff Hawkins](https://en.wikipedia.org/wiki/Jeff_Hawkins) and others, will borrow richly from the wisdom of evolution instead of trying to override it.
 
-## Eugenics
+## 13.4 Eugenics
 
 By definition, [eugenics](https://en.wikipedia.org/wiki/Eugenics) is a good thing. Its a quest to improve the genetic make up of humanity. It may involve eliminating some lethal genetic disorders. Eugenics was given a bad name by Hitler, the Nazis, and others. That Nazi variant could be called a *"hate optimization"*. Instead of improving the gene pool, it was to be made supposedly better but keeping it monoracial. Races are a treasure. They enrich the human gene pool, incl. the pool of genes responsible for multiple intelligences.
 
@@ -54,7 +54,7 @@ The right approach to brain eugenics might be to select for excellent opus vitae
 
 **Pushing the brain to its limits does not benefit the evolution of the brain. It may exert an evolutionary pressure opposite to the one intended**
 
-## Summary: Brain evolution
+## 13.5 Summary: Brain evolution
 
 - [learn drive](https://supermemo.guru/wiki/Learn_drive) and the [natural creativity cycle](https://supermemo.guru/wiki/Natural_creativity_cycle) are marvels of the evolution that are hard to improve upon
 - sleepiness and boredom are defense weapons that protect the brain
