--- a/我再也不会把孩子送去学校/15.How baby brain does not work.md
+++ b/我再也不会把孩子送去学校/15.How baby brain does not work.md
@@ -1,12 +1,12 @@
-# How baby brain does not work
+# 15 How baby brain does not work
 
-## Accelerating development
+## 15.1 Accelerating development
 
 We shape the future of this planet by shaping baby brains.
 
 These days, we begin the educational effort even before the pregnancy. Active moms exercise while pregnant, and play Mozart to babies in the womb. Active dads begin an exercise and training regimen from the cradle. We make babies speak sentences at 6 months. Master phones and tablets before they can speak. Make them read at 2 years old. Play piano at 3. Speak languages at 5. Enroll at the university at 8, and hope for an early PhD in their teens as well. The only problem with that eager approach is that it may all be wrong.
 
-## Perfect forgetting machines
+## 15.2 Perfect forgetting machines
 
 You will often hear from your pediatrician that a child's brain is a perfect learning machine, or that in the first 3 years of life we learn more than in the entire adulthood. Those well-intentioned statements are misleading and may lead to wrong strategies.
 
@@ -20,7 +20,7 @@ Why do kids keep winning the learning battle in the long run? They just overwhel
 
 Some researchers claim that kids learn more in the first 3-5 years of life than they ever will. This depends on how we measure learning. In terms of neural revolutions within, this is true. In terms of declarative knowledge, this is wildly untrue. The speed of acquiring vocabulary may indeed be staggering between ages 3 and 6. It is powered by all-day-long learning. The slow deceleration at later ages does not come from the loss of learning capacity. It comes from the saturation of needs typical of the asymptotic learning curve. In the meantime, learning capacity keeps increasing. With the employment of tools like [incremental learning](https://supermemo.guru/wiki/Incremental_learning) that capacity may keep increasing even at my age (i.e. above fifty).
 
-## Infantile amnesia
+## 15.3 Infantile amnesia
 
 There is a concept called "*infantile amnesia*". We generally do not remember things that happened to us before the age of 3 or so. If you claim recall from the age of 2, you are almost certainly wrong. It would take a different article to explain how we know that. Some traumatic or emotional memories may be recalled by coming back to mind very often, some memories might be re-told by parents, or remembered by watching things on home video, etc. This is why chances are you will disagree using yourself as an example. Scientists are not entirely sure why we suffer from infantile amnesia. Some believe that kids "misplace" information in their memory. In other words, kids learn a lot, information stays with them for years to come, but they cannot retrieve it later on.
 
@@ -28,7 +28,7 @@ I can tell you **exactly** what happens to those memories. They are gone! Usuall
 
 For more see: [Childhood amnesia](https://supermemo.guru/wiki/Childhood_amnesia)
 
-## Brain rewiring
+## 15.4 Brain rewiring
 
 How can then kids master a language? Or learn to walk? Or ride a bike? How can they bring up durable skills in a brain that keeps forgetting at a staggering speed?
 
@@ -38,7 +38,7 @@ The main difference between the young brain and the adult brain is that the kid 
 
 Young brains grow fast. They learn by changing their structure. By forging new pathways. This is why we may harbor the illusion that some memories stay with the kid for ever. For the sake of argument, I will claim these are not "memories", these are skills, characteristics, procedures, etc. **All the early investment in learning should shape the character, not specific memories**. In neural network terms, the change affects structures and controllability, not individual synapses. Simple declarative memories do not last in a fast growing brain. They need to be re-memorized over and over again.
 
-## Precocity and stress
+## 15.5 Precocity and stress
 
 The bombshell conclusion coming from the above picture is that precocity may not necessarily be a welcome quality. Look at a little kitten, it will walk and play ages ahead of your baby, but it will be your baby who will join NASA one day.
 
@@ -50,13 +50,13 @@ This might be why kindergartens are so good at accelerating development (e.g. sp
 
 The major lesson and warning for all parents is that we do not want to use stress as an accelerator in learning. We do not want to whip our kids to faster development. Unfortunately, this is happening all the time as I write these words. This is a universal mistake made by nearly all parents. Parents get "rewarded" by seeing their kids shape up early, so they try more of the same bad medicine. Some parents will yell at their kids for being slow. Others will marvel at an "incredible acceleration" caused by daycare, which should rather be labelled "the effect of maternal separation". It is maternal separation that "improves" baby rat memories. Fast development may mean shorter growth span. This is trading minor short-term gains for major long-term harm!
 
-## Precocious genius
+## 15.6Precocious genius
 
 We are marvelling at Mozart composing his first pieces at the age of 2. Why can't our kids do that? Perhaps some early classes in piano or violin can help? Wait! Wikipedia says Mozart started composing at 3? That's one year more. Perhaps that tablet app will make a difference? Perhaps we can double that piano time and she can still do it? Then we hear on ABC News that Mozart rather started composing at 4? The actual age at which Mozart produced his first simple compositions might actually be 5. That's still mighty impressive. His incredible start might have come from a combination of precocity and the impact of his father. A perfect storm of smarts and ideal upbringing. For all hopeful parents, the message should be clear: great parenting makes a world of difference. However, no parent should impose a timeline on achievement. If it does not come at 5, it might come at 7, and it might come better. Acceleration cannot come with the use of a whip. Slow growing brains may grow further.
 
 As for playing Mozart music to a baby in the womb, it might rather scare the baby or just wake her up. Fetuses may have a good hearing, but their memory isn't too good. Research show they are able to form some memories, but consider that they will start recognizing their name only at 5-7 months old. Mozart will do little to their development. Considering the brain growth stages, this will definitely have no effect on anyone's chances of bringing up a Mozart's successor. Nothing will work better for the latter than instilling a **passion** for music early. And when I say "early", I do not mean a newborn or perhaps even a toddler. Whatever you do before the brain is ready will likely be wasted time. And if the passion for music does not come, some [other passion will](https://supermemo.guru/wiki/Passion_and_memory).
 
-## Precocity paradox
+## 15.7 Precocity paradox
 
 Kids with astronomical IQs tend to grow up to be successful but otherwise pretty normal, or dare I say, average adults. There is only a weak correlation between IQs above 120 (i.e. smart) and the degree of success in life. On the other hand, people with genius accomplishments often appear to be pretty ordinary while at school. It is the principle of slow but unrestrained growth that may explain the child prodigy paradox. Why so many prodigies burn out before reaching their adult peak? There have been a lot of hypotheses on the phenomenon:
 
@@ -73,13 +73,13 @@ Very often the explanation may be simpler and not that optimistic. The explanati
 
 **Those who accelerate early may peak early**
 
-## Nigeria rules the world!
+## 15.8 Nigeria rules the world!
 
 I am a great fan of African football. I always celebrate when "my" players bring home another world cup. Africa rules the world! If you are not too deep into football, you probably ask *"World Cup? When? It is Germany and Brazil who seem to always win the Cup!"*. The fact is that Nigeria won the world cup 5 times. More than any other nation in history. Ghana won it 3 times. It all happened at the youth level. This is a happy story of precocity. If you look at those young African teams, they are not only more physical and stronger. They jump higher, run faster, and fear no bone-breaking challenge. They are also smarter. You can see that in their every move, decision, and their teamwork. They are happy. They play happy. Why didn't we have an African world champion at the senior level? It is because of the fact that precocity does not always translate to adult genius. West Africans reap a lot of benefit from accelerated motor development and early puberty. They are the best sprinters. Usain Bolt is of the same lineage. It is at the senior level, when the [Prussian discipline](https://en.wikipedia.org/wiki/Prussian_education_system) takes over and we grind to the peak of human achievement. Perhaps this is why Germany is the current title holders (2016). I have no doubt Africa's time is to come soon. Africans need to take better care of the precocious young before sending them out for exploitation in Europe? Africa needs to inject some Prussian planning and smart management. Precocity cannot be exploited. It must be managed in kid gloves.
 
 Africa's early success is a good metaphor for brain development in education. Accelerated development does not always translate to peak performance at adulthood. Just the opposite, many a great physicist or mathematician started out with seemingly troubled childhood. Speaking late, suspected autism, monothematic interests, strange behavior, social issues, ostracism, troublemaking, [bullying](https://supermemo.guru/wiki/Bullying), [ADHD](https://supermemo.guru/wiki/Confusing_creativity_with_ADHD), OCD, etc. This is often the price of a brain that keeps growing and fails to congeal its structure early. If your child is healthy but behind some targets, this might actually be a good thing.
 
-## Summary: baby brain problems
+## 15.9 Summary: baby brain problems
 
 - children have a very bad long-term memory
 - bad long-term memory in children results from fast growth, and [re-structuring of the brain](https://supermemo.guru/wiki/Infantile_amnesia_caused_by_neurogenesis)
