--- a/我再也不会把孩子送去学校/16.Childhood amnesia.md
+++ b/我再也不会把孩子送去学校/16.Childhood amnesia.md
@@ -1,6 +1,6 @@
-# Childhood amnesia
+# 16 Childhood amnesia
 
-## Introduction
+## 16.1 Introduction
 
 **Childhood amnesia** is the period of the first 2-4 years of life when a child is unable to form memories that might last a lifetime. Interestingly, there is no actual amnesia in a healthy child. Childhood amnesia is a misnomer. I will explain why.
 
@@ -10,9 +10,9 @@ Most importantly, childhood amnesia has a monumental impact on learning and deve
 
 Understanding childhood amnesia is essential for protecting kids from the harm of early acceleration programs
 
-## Measuring amnesia
+## 16.2 Measuring amnesia
 
-### Methodology problems
+### 16.2.1 Methodology problems
 
 Childhood amnesia is known to almost everyone. Except for a few cases of false memory, we do not seem able to recall much or anything from before the age of 3-4. Researchers have for long been interested in the phenomenon hoping it could shed some light on how memory works and how it might benefit learning later in life. The old and tried method of collecting data on childhood amnesia is an interview.
 
@@ -28,7 +28,7 @@ It seems that for an individual child, only a close caregiver could note a suffi
 
 These days, kids have many caregivers, spend a great deal of time in [daycare](https://supermemo.guru/wiki/Daycare), and reliable research would probably require a single parent living with a child in highly controlled conditions. Even then, it would be a result relevant to that child only.
 
-### Forming first memories
+### 16.2.2 Forming first memories
 
 To find out when lifelong memories begin seems like an interesting question. It might shed some light on how the young brain works. However, if we look at details of the process in which earliest memories are formed, the precise timing becomes far less interesting. It is simply a matter of chance. As such, finding the exact number for an individual is interesting but largely inconsequential. Finding the number for a large number of kids would be far more valuable but very hard to achieve.
 
@@ -43,11 +43,11 @@ The above scenario shows that the formation of earliest memories will depend on 
 
 The most important underlying process, which is the [speed of forgetting](https://supermemo.guru/wiki/Forgetting_curve), will be of consequence, but the timing of the earliest memory might change by several months or even years by sheer chance.
 
-## Neurogenesis hypothesis
+## 16.3 Neurogenesis hypothesis
 
 The old thinking about childhood amnesia is that it was either a storage problem or a retrieval problem. It is neither. Memories are stored ok, and can be retrieved ok until they can not.
 
-### Observing a child
+### 16.3.1 Observing a child
 
 To investigate infantile amnesia, the ideal setting would be a single parent with a single child living in some isolated mountain hut under close supervision of cameras. To make the research meaningful, we might need dozens of similar setups to investigate individual variability.
 
@@ -57,7 +57,7 @@ A single parent in isolation is ideal. Adding a second parent to the picture may
 
 Jesselyn and Frankland do not live in an isolated hut, but they live in the second best place for research: science labs. Charlotte has spent her first five months [at work with her parents](https://www.thestar.com/life/sick_kids/2010/05/05/research_becomes_a_family_affair.html).
 
-### Neurogenesis hypothesis
+### 16.3.2 Neurogenesis hypothesis
 
 Charlotte Frankland made history when she was mentioned in an important paper which hypothesizes on the [role of neurogenesis in infantile amnesia](https://supermemo.guru/wiki/Infantile_amnesia_caused_by_neurogenesis).
 
@@ -71,15 +71,15 @@ The young hippocampus is in constant flow. Memories stored in the cortex may los
 
 Nobel winning icon of memory research, [Dr Eric Kandel](https://en.wikipedia.org/wiki/Eric_Kandel) agrees: "*The hippocampus matures slowly and probably doesn’t reach any reasonable maturity until we’re 3 or 4. While 2- and 3-year-olds can remember things for a short time, the hippocampus is required for long-term storage of those memories*".
 
-### Future research
+### 16.3.3 Future research
 
 Paul Frankland hopes to verify some of his hypotheses using research on kids suffering from brain cancer. In chemotherapy, drugs that slow down neurogenesis without actually damaging nerve cells may turn out to improve memory in childhood. If this research confirms Frankland's prediction, it will provide a harrowing proof that good memory isn't always a good thing in early childhood.
 
-### Kids have no long-term memory
+### 16.3.4 Kids have no long-term memory
 
 Let's re-examine childhood amnesia as a retrieval failure in the context of the neurogenesis hypothesis. It is possible that due to neurogenesis, some cortical connection might become inaccessible. However, calling it retrieval failure would be a misnomer as it would suggest memories might somehow be retrieved given favorable circumstances. Those abandoned memories are like seeds of wheat on a desert: bereft and useless. They are a likely target of [synaptic elimination in sleep](https://supermemo.guru/wiki/Memory_optimization_in_sleep). Little kids virtually have no declarative long-term memory for semantic knowledge. Declarative recall in 6 months comes from review (e.g. names "milk" and "bottle" survive well with daily review). Episodic recall in 6 months comes also mostly from review, e.g. due to a traumatic nature of a memory, or in a specific repeated context (e.g. passing the same landmark on the way to daycare). Those kids that do have a genuine memory of a span of months might be precocious, but memory precocity may also imply shorter period for brain growth. If precocity is achieved by any form of acceleration or [stress](https://supermemo.guru/wiki/Stress_resilience), this may spell the possibility of never growing up to one's true potential.
 
-### Plasticity-vs-stability trade off
+### 16.3.5 Plasticity-vs-stability trade off
 
 Plasticity and forgetfulness come hand in hand. Memory [stability](https://supermemo.guru/wiki/Stability) is essential to prevent [forgetting](https://supermemo.guru/wiki/Forgetting). It is also an essential property of neural networks. As much as biological networks use stability for the purpose of high reasoning, artificial neural networks may use the same trick to allow of sequential learning without the side effect of catastrophic forgetting. Plasticity is vital for learning. Stability is vital for intelligence.
 
@@ -95,7 +95,7 @@ The illusory absence of declarative memory may extend up to the age of 6 or 7, a
 
 Before puberty, brain development is more about structural crystallization than about declarative learning. This is why play and exploration should receive priority over schooling
 
-## Measuring infantile amnesia with SuperMemo
+## 16.4 Measuring infantile amnesia with SuperMemo
 
 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) is an excellent tool for studying memory. However, it cannot be used for studying childhood amnesia because amnesia refers to episodic memories that are not a typical subject of intentional review in SuperMemo. Moreover, SuperMemo would instantly evoke an observer effect in which duration of memory is artificially impacted by the measurement (review).
 
@@ -125,7 +125,7 @@ In addition, a 1 year old toddler may learn "obvious" things like "a car", which
 
 The fact that a 3.5 year old can compete with an adult is already much better a reflection of memory properties. It needs to be emphasized strongly that adults also differ by a wide margin due to the differences in their ability to [formulate well-structured questions](https://supermemo.guru/wiki/20_rules) in the learning process. A comparison with an excellent student might keep kids at a disadvantage for much longer. Even up to their teens years.
 
-## Measurement example
+## 16.5 Measurement example
 
 Every parent can attempt to contribute to the measurements of childhood amnesia. If you happen to follow the prescription below, please do not forget to mail your results to [me](https://supermemo.guru/wiki/Piotr_Wozniak).
 
@@ -148,7 +148,7 @@ Obviously, measuring amnesia is a hazy science. Minimum memory survival is arbit
 
 Dating amnesia at the age of 5 is interesting, revisiting the same data at the age of 10 can bring an entirely different result. Earliest memories can get lost. Testing recall of an older child should shift the actual boundary to a later age, but might also be more prone to false memories (e.g. implanted by a parent, recalled via pictures or videos, or resulting from conglomeration of memories).
 
-## Retrospective recall curve
+## 16.6 Retrospective recall curve
 
 Rubin and Schulkind in 1997 showed two phases of amnesia in the first decade of life using [autobiographical memories](https://supermemo.guru/wiki/How_autobiographical_memories_fade_in_time). Those phases should easily be explained as a gradual process in which the capacity of long-term memory increase and interference related to brain growth is diminished (see: [graph](http://learnmem.cshlp.org/content/19/9/423/F1.expansion.html)).
 
@@ -160,7 +160,7 @@ Interestingly, on multiple occasions I documented forgetting of episodes recalle
 
 Earliest memories carry strong persistence, which probably comes from the badge of being the earliest memory.
 
-## Childhood amnesia: Mechanism
+## 16.7 Childhood amnesia: Mechanism
 
 There is no actual amnesia in healthy childhood. Childhood amnesia is a misnomer.
 
@@ -195,7 +195,7 @@ Sadly, the earliest recalled event isn't usually the trip to Disneyland. Traumat
 
 All parents of boys who are late to speak, or late to ride a bike are told that "*boys are slower than girls*". This is true. This primarily boils down to testosterone and its impact on the brain. Slow development in boys is actually good news. Their brain growth window might be more turbulent. In addition to the proverbial glass ceiling facing all girls, there is still some advantage to slow-growing male brains. It will be males who will largely populate math and physics departments. They will rein in chess or even in Nobel Prize awards. Naturally, Judith Polgar or Marie Curie prove that all ceilings can be shattered with self-discipline and persistence.
 
-## Childhood amnesia mythology
+## 16.8 Childhood amnesia mythology
 
 There is a rich childhood amnesia mythology. Even the scientific community is permeated by erroneous interpretation of the phenomenon. I won't give Freud ideas a mention beyond his contribution to coining the term: *infantile amnesia*. First solid research on the increased rate of forgetting in childhood came from before I was born. However, this still does not prevent new interpretations spawning on a regular basis. Childhood amnesia is nothing more than faster forgetting in childhood. As such it should not even be called amnesia. It is not a disorder. Memories get formed. We just lose them faster.
 
@@ -213,7 +213,7 @@ In the context of schooling, an interesting small-sample research was carried ou
 
 Early schooling is likely to cause an accelerated loss of childhood memories
 
-## My first memories
+## 16.9 My first memories
 
 Personal anecdote. [Why use anecdotes?](https://supermemo.guru/wiki/Why_use_anecdotes%3F)
 
@@ -233,7 +233,7 @@ My second earliest memory is about daycare itself. In compulsory nap periods, I 
 
 I have lots of other memories from that period, but I suspect they might have been planted in my head later by reviewing family pictures. Those less pleasant memories, e.g. of bullying, seem to have survived best. This is exactly what theory says: early stress accelerates development of memory. This leads to many short-sighted strategies employed in child development. Early memory may often mean shorted time for development.
 
-## Conclusions for parents
+## 16.10 Conclusions for parents
 
 Childhood amnesia has wide implications for parenting strategies. These are top conclusions I suggest be taken home from this text:
 
@@ -247,7 +247,7 @@ Childhood amnesia has wide implications for parenting strategies. These are top 
 
 All the above points can be met by ceding some authority and entrusting kid with more decision-making. Child's brain has a great deal of ["magic" powers](https://supermemo.guru/wiki/Learn_drive)in determining what's best for its development.
 
-## Summary: Childhood amnesia
+## 16.11 Summary: Childhood amnesia
 
 - children rarely recall memories from before the age of 2-3
 - retrospective recall shows exponential decline back in time and approaches zero around the age of 3
