--- a/我再也不会把孩子送去学校/17.Daycare misery.md
+++ b/我再也不会把孩子送去学校/17.Daycare misery.md
@@ -1,32 +1,32 @@
-# Daycare misery
+# 17 Daycare misery
 
-## Benefits of daycare
+## 17.1 Benefits of daycare
 
 For many parents daycare is unavoidable. Daycare facilities keep improving. They use better science and better practices. They keep learning. Therefore, I do not want anyone to feel bad about my text. Things get better. But I agree with pre-Trump version of Mike Pence: **Kids in daycare get a short end of the stick**. Even the best and most professional daycare won't effectively replace a good mother. It is very hard to find good information about the true effect of daycare because there is a whole industry who powers daycare and a whole army of moms who want to be free from child care.
 
 Excellent daycare employees swear by their methodology and benefits. They claim that kids still benefit. This often comes from contacts with parents whose knowledge and skills may not be up to the par of what can be provided by professionals. However, if you read this text and ponder your options, you are qualified enough: **keep your child with you!**
 
-## Social pressure
+## 17.2 Social pressure
 
 There is a social pressure to send kids to daycare. Many a mom observes proudly the acceleration in development. A kid, that was mute or totally dependent, starts naming things, communicating, or putting on one's T-shirt. This is great for [mom's sense of guilt](https://supermemo.guru/wiki/Moms_feel_guilty_about_daycare): "*Mummy goes to work to earn money for the baby. You go girl and learn!*". The same mom feels even better if it tells stay-at-home mom "*send your kids to kindergarten, this will do miracles to their social skill development, don't keep them just cooped up at home!*".
 
-## Problem of daycare
+## 17.3 Problem of daycare
 
 Daycare is an artificially constructed environment that violates many conditions needed for unconstrained development. The main violations occur in the areas of stress and sleep. Those violations affect the brain and all parents should be aware that "*kindergarten acceleration*" is a dangerous myth. [Kids do accelerate into a groove of long-term stagnation](https://supermemo.guru/wiki/Learning_acceleration_via_stress). Good news today may be bad news in a decade. Daycare has been [linked with an increase in aggressive behaviors and other behavioral problems](https://supermemo.guru/wiki/Childcare_predicts_socioemotional_problems). This short text explains why.
 
-### Problem 1: Sleep hygiene
+### 17.3.1 Problem 1: Sleep hygiene
 
 **Most kids need to be woken up for daycare. This is a major violation of brain hygiene**. For kids who wake up naturally, there is no issue. Chronotherapy can help, but few parents know how to use it. The cheapest and obvious solution is a gentle waking prod from a parent. Being gentle is better than being abrupt, but it still has an awful impact on health and brain growth. The violation of waking kids up is most critical in the first 3 years of development. Sending kids sleepy to daycare begins a vicious spiral of negative health consequences. For an unlucky kid, those tend to pile up from month to month stunting growth and undermining long term outcomes.
 
-### Problem 2: Child stress
+### 17.3.2 Problem 2: Child stress
 
 **In most cases, daycare involves child stress. Chronic stress is a prime factor in stunting brain growth.** For a tiny kid, the first day in daycare is almost inevitably stressful. If the kid goes to daycare all smiles, this is usually not an issue either. The largest stress component is [maternal separation](https://supermemo.guru/wiki/Behavioral_effects_of_maternal_separation_and_early_weaning). Research shows that it has a powerful impact on little brains. There is a host of procedures that can make sure that kids accept maternal separation as a norm. In the end, most kids do. However, the chief mechanism used in that procedure is [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness_vs._learn_drive). In short, when kids are left with no choice, they stop combating the status quo. It happens to all humans in conditions of limited freedom.
 
-### Vicious circle: positive feedback loop
+### 17.3.3 Vicious circle: positive feedback loop
 
 Sending kids out to daycare sleepy and stressed begins the vicious circle of health consequences: slower development, lower immunity, [infections](https://supermemo.guru/wiki/Daycare_infections), antibiotics, missed days, more stress, more sleep deprivation, etc. That vicious circle may have societal dimensions.
 
-## Physiological acceleration
+## 17.4 Physiological acceleration
 
 Weaning is a natural process than may take 2-5 years. Many moms choose not to breastfeed. They do it at child's peril. Others wean early. Daycare may be used as an excuse for early weaning. This is one more reason to delay or avoid daycare. A child may seem to accept weaning. In many cases this will happen via [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness_vs._learn_drive).
 
@@ -52,13 +52,13 @@ So many potty-training books, so many stressed kids and parents, so many time ou
 
 For all kids, **all form of "physiological acceleration" should be avoided** or approached with utmost caution.
 
-## Daycare: The verdict
+## 17.5 Daycare: The verdict
 
 Nearly all parents who send kids to daycare will look for excuses. [Kindergarten acceleration](https://supermemo.guru/wiki/How_baby_brain_does_not_work) is an illusion. The supposed benefits of infections are largely [a myth](https://supermemo.guru/wiki/Daycare_infections). The benefits of socialization can be accomplished [differently and better](https://supermemo.guru/wiki/Optimal_socialization). If reasonable home care can be provided, daycare should be avoided.
 
 **No daycare can ever compete with good parenting!**
 
-## Feminist perspective
+## 17.6 Feminist perspective
 
 During one of my child development conversations, a young mom politely but unhesitantly called me a "male chauvinist pig": "*with all your views on breastfeeding and co-sleeping, where is the room for a woman? If you care so much about the planet, imagine that I may work on saving the world at the tiny cost of inconveniencing my child? I cannot afford going to work brain dead, just because of some negligible benefit to child's health from co-sleeping*".
 
@@ -71,7 +71,7 @@ This is why I might be a bit unhappy with "mommy blog propaganda" extolling the 
 
 What a parent can accomplish today, the kid may accomplish better, by an order of magnitude, in a generation. The starting value of the capital is far beyond negligible. The balance after three decades can turn out astronomic.
 
-## Summary: Daycare misery
+## 17.7 Summary: Daycare misery
 
 - daycare is an inferior substitute of good parenting
 - in western societies, there is a social pressure to send kids to daycare
