--- a/我再也不会把孩子送去学校/18.Stress resilience.md
+++ b/我再也不会把孩子送去学校/18.Stress resilience.md
@@ -1,6 +1,6 @@
-# Stress resilience
+# 18 Stress resilience
 
-## Good stress and bad stress
+## 18.1 Good stress and bad stress
 
 While scientists speak of the damaging effects of stress on the brain, the concept of stress-free upbringing receives a great deal of scorn in social media. The confusion comes from the failure to differentiate between various forms of stress.
 
@@ -8,13 +8,13 @@ Kids who suffer from separation anxiety when dropped in daycare at the very youn
 
 [Attachment parenting](https://en.wikipedia.org/wiki/Attachment_parenting) is often derided as "stress-free upbringing", while it should rather be seen as a good parenting that indeed helps prevent stress wherever it is harmful for health or brain development.
 
-## Global loss of IQ
+## 18.2 Global loss of IQ
 
 [Flynn effect](https://en.wikipedia.org/wiki/Flynn_effect) says that there is a global increase in IQ from generation to generation. However, there is also a dark force in action that counteracts that positive trend. There is a global loss of brain cells and a global loss of creative power in developed societies. This loss is caused by bad sleep, stress, and depression. We have unleashed forces that keep destroying brains in modern society, and those forces seem to only increase in power from decade to decade. We can counteract those forces by using the tools of neuroscience. We need to start from shielding babies, toddlers, kids, and adolescents from brain-altering influences that shape their future life and leave them defenseless in face of adversity. The younger the child, the more important it is to take the right approach. Mishandling young brain leaves permanent imprints on personality and brain health that may be hard to correct in adulthood.
 
 The very first step is the need to **clear up the fog surrounding the myth that exposing kids to stress early will make them more stress resistant later in life**. There is only a tiny grain of truth in that claim, which otherwise is seriously harmful.
 
-## Resistance to chronic stress
+## 18.3 Resistance to chronic stress
 
 From the proponents of rigors of daycare and schooling, I hear it over and over again: "*How will the kid cope as an adult?*" "*Will he tell the boss "I like to sleep long and work 2 hours only?*".
 
@@ -28,7 +28,7 @@ The problem is that not all tissues and systems are trainable, and not all degre
 
 **The younger the brain, the greater the possible negative impact of chronic stress.**
 
-## Adaptation to stress
+## 18.4 Adaptation to stress
 
 When a fighter is to face an opponent in the ring, his body activates a stress response. Fighting is stressful. Stress response helps to fight better. Having spent many hours in the ring, fighters understand risks and dangers better. They know how to avoid punches. Stress level in good fighters is reduced. This is **knowledge-based adaptation to stress**. With experience, fighters understand the game of fighting better. In boxing, top-level competitors may drive this knowledge-based adaptation to the point of actually enjoying the prospect of a risky encounter.
 
@@ -46,9 +46,9 @@ Many a parent may be tempted to emulate Williams or Polgar accomplishments in to
 
 There are benefits to eustress, and various forms of "stress" are part of a healthy training and development. However, there are no trainable defences against chronic stress, i.e. the one you get with perpetual sleep deprivation, bullying, maternal separation, child abuse, etc. Those are stresses that change the metabolism, and change the wiring of the brain. They correlate well with an increase in mental disease, behavioral disorders, addictions, etc. Chronic stress is the type of stress you go to sleep with. Characterically, this is the stress that does not go away on waking. Its chronic nature is best expressed by the fact that there is no "*rise and shine*". Chronically stressed kid wakes up with a worry. Chronic stress can persist and gnaw at you for days or weeks. Attenuation can be used to reduce the impact of inevitable stress. Professional training helps stress management in stressful jobs. However, the purpose of those is the prevention of chronic stress, procedural adaptation, or knowledge-based adaptation. Professional training does not provide biological resistance to the effects of chronic stress.
 
-## Preparation for adulthood
+## 18.5 Preparation for adulthood
 
-### Stress resilience training
+### 18.5.1 Stress resilience training
 
 Older psychologists and educators have often been biased by years of analysis of institutionalized children. As a result, they may perpetuate the myth born in the 1950s: "*sour faces in kids are ok because duty and discipline are educational*"! They believe that a well-organized kindergarten group is better than a rowdy sports field crowd of mixed-aged peers. That thinking is directed at preparing the kids to live in the modern adult world.
 
@@ -56,11 +56,11 @@ The opposite is true. Freedom is a better way to shape a better future character
 
 **Youth should be devoted to brain development**. There is no stronger weapon than a well-developed brain. Learning and "preparation" come easy to a brisk brain. They can proceed in proportion to maturity. They can capitalize on the [learn drive](https://supermemo.guru/wiki/Learn_drive) with minimal assistance from [optimum push](https://supermemo.guru/wiki/Push_zone).
 
-### Discipline training
+### 18.5.2 Discipline training
 
 Preparation for adulthood is not only about stress resilience. Many educators claim that kids who suffer no discipline won't be able to adapt to a job that requires a submission. This is false. All animals follow an instinctive drive for freedom. This drive has evolutionary benefits. Captured deer will struggle to the point of injury. Restrained puppy will yelp for freedom of space. Human mind that grows free from shackles will retain the quest for open spaces and freedom till the very end of life. For a healthy brain, there is very little difficulty in achieving self-restraint and self-discipline through reason. Limits on freedom in childhood may generate stress that may limit brain development that, later in life, paradoxically, will make it harder to impose self-discipline. On the other side of the equation, freedom fosters creativity, which is an equally priced possession. You do not need to be an employer to know that it is far easier for a creative individual to self-impose restraint than for a well-disciplined soldier to [become creative on demand](https://supermemo.guru/wiki/Creativity:_abundant_but_suppressed!). Preparation for adulthood needs to take into account the immaturity of the brain. Taking on a hard 9-5 job may be easy for a high-IQ thirty-year-old. The same job may be highly stressful for a teen, bad for health for a 10-year-old, or a plain brain destroyer for a 5-year-old. We should celebrate the fact that we no longer need to send 8 year olds to handle a factory assembly line to earn a living.
 
-## Homeschooler's sleep
+## 18.6 Homeschooler's sleep
 
 Homeschoolers often boast that what they like most about learning at home is that they can get good sleep. **The right to get good sleep should be a basic human right for children**. Some professions involve inevitable sleep deprivation or interference with chronobiology. However, adaptations to "messy sleep" lifestyle are predominantly procedural, not biological. Going to sleep early, and sticking to regular sleep hours are both procedural adaptations. The only significant biological adaptation is the possibility of determining the sleep phase via [chronotherapy](http://super-memory.com/articles/sleep.htm#Curing_DSPS_and_insomnia). In the course of 2-3 weeks, an owl can be made into an early bird with the tools of chronobiology. This is again procedural adaptation that capitalizes on a single property of the sleep control system: [sleep phase](http://super-memory.com/articles/sleep.htm#Curing_DSPS_and_insomnia). This is not a biological adaptation that helps reduce the effects of sleep deprivation once it occurs.
 
@@ -72,7 +72,7 @@ For contrast, imagine giving a child a 50ml glass of vodka in the morning. In te
 
 See also: [How to reduce the impact of stress on sleep](http://super-memory.com/articles/sleep.htm#Stress)
 
-## Optimum stress exposure
+## 18.7 Optimum stress exposure
 
 Stress can be acute, i.e. sudden. It can also be chronic, i.e. long lasting. It is the [chronic stress than does most of the damage](http://www.humanstress.ca/stress/understand-your-stress/acute-vs-chronic-stress.html).
 
@@ -92,7 +92,7 @@ The inevitable exposure to significant stress should be phased in gradually in a
 
 Paradoxically, mixing up stress with love and shelter may be dangerous as well. The kid exposed to the stress of bullying may deepen the injury by ruminating his predicament in the confines of a loving home. This is why parents should also learn about the art of [stress inoculation](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Stress_resilience), which has nothing to do with chronic stress.
 
-## Stress resilience
+## 18.8 Stress resilience
 
 If optimum stress exposure implies avoiding [chronic stress](https://en.wikipedia.org/wiki/Chronic_stress) in childhood, how come some behavioral research in animals indicate that stress may improve resilience? For example, intermittent maternal separation may lead to more independent and emotionally sturdy animals? See: [Stress inoculation may improve resilience later in life](https://supermemo.guru/wiki/Stress_inoculation_may_improve_resilience_later_in_life)
 
@@ -129,7 +129,7 @@ When tiny babies are thrown into an icehole in Ukraine, the reaction of a wester
 
 In summary, **we should surround kids with love, shelter them from chronic stress, and keep the mind open when it comes to acute stress and beneficial stress inoculation**. On the other hand, **childhood without exposure to risk and acute stress is less likely to lead to resilience later in life**.
 
-## Summary: Stress resilience
+## 18.9 Summary: Stress resilience
 
 - youth should be devoted to brain development
 - in development, we need to differentiate between [chronic](https://supermemo.guru/wiki/Chronic_stress) long-lasting stress and acute short-lasting stress
