--- a/我再也不会把孩子送去学校/19.Childhood passions.md
+++ b/我再也不会把孩子送去学校/19.Childhood passions.md
@@ -1,18 +1,18 @@
-# Childhood passions
+# 19 Childhood passions
 
-## Childhood passions
+## 19.1 Childhood passions
 
 Parents often dream of choosing a career for a child. They often understand that a good passion is the best formula for a good career. However, seeding passions is not easy. The most productive passions are those that arise naturally. Like in [childhood amnesia](https://supermemo.guru/wiki/Childhood_amnesia), passions are subject to similar processes of [forgetting](https://supermemo.guru/wiki/Forgetting), and [interference](https://supermemo.guru/wiki/Interference). A new passion can obscure an old passion. All passions should be cherished as they drive development. If the passion does not meet adult criteria for "worthwhile pursuit", all efforts at redirection must stay within the [push zone](https://supermemo.guru/wiki/Push_zone). In the end, the kid should decide. All passions are of value: [videogames](https://supermemo.guru/wiki/Videogames), [hip hop](https://supermemo.guru/wiki/Hip_hop), or even boxing. They should never be mocked, disrupted, or neglected. Great passions require a great investment of time and energy. In youth, those are primarily stolen by [schooling](https://supermemo.guru/wiki/Schooling). However, even limited time for passions is of little value if there is a deficit in the level of the [learn drive](https://supermemo.guru/wiki/Learn_drive) that may be [suppressed by schooling](https://supermemo.guru/wiki/Schools_suppress_the_learn_drive) (e.g. due to stress or bad sleep).
 
 **One of the greatest sins of schooling is that it destroys passions by undermining the learn drive**
 
-## School notebooks
+## 19.2 School notebooks
 
 I love to review children's notebooks. They give me an insight into kid interests, passions, motivations, and learning. Some notebooks are messy and hard to read, some are spotless, some seem a mindless rendition of teacher's orders, while others seem to tell a better story: kids are passionate students of the natural world. The practice of making notes is in decline. Why bother with notes if all knowledge is available at fingertips on the web? This week I saw 9-year-olds talk about a fantasy movie. Someone confused a minotaur with a centaur. A girl pulled out a phone and issued a Google voice query in Polish "*What is a minotaur?*". She got an answer from Wikipedia in milliseconds and could boast of her knowledge to others. In seconds, all kids knew that a minotaur was a mythical figure with a body of a man and the head of a bull.
 
 Some teachers specifically instruct kids to keep no notes and focus on the class. This seems to improve attention. The great advantage of the decline in note-taking is that heavy back-breaking school bags are slowly retiring to history. The great disadvantage is the decline in handwriting skills. I use handwriting only when I have no access to a computer. The loss of my own handwriting skills is so bad that if I do not read my notes fast, I cannot decode them. My hand-written notes are generally not readable. These days kids use a pen less and less often. Perhaps electronic pens will remedy that decline in handwriting?
 
-## Notes in pictures
+## 19.3 Notes in pictures
 
 Look at the picture! It is a page from a 6 grader's biology notebook. Doesn't it show how beautiful, fun, and inspirational schooling can be? What if I told you that this notebook had 66 similar meticulously handcrafted images? Wouldn't you expect that paintwork to have a significant impact on child's mind and on learning? Even better, what if I told you the kid can still vividly recall those pictures and associated stories 40 years later?
 
@@ -29,7 +29,7 @@ The conclusions for this case seem clear:
 
 The only problem with these conclusions is that they are false. The picture smuggles a big lie. I know the lie for a fact, because the picture is mine. It tells a story of a passion that was nearly lost. The school is not a hero in this story. It is a villain!
 
-## Single event can spark a passion
+## 19.4 Single event can spark a passion
 
 At the age of 5, Albert Einstein had a chance to play with a compass. This started his lifelong passion for understanding the physical universe. Nearly all great inventors and discoverers can trace their passions to early childhood events. The same is true of hobbyists, collectors, artist, sports fans, and people with all imaginable passions in life. Passions developed later in life rarely have the same power. It is kids with seemingly infinite amounts of time on their hands who can turn passions into thousands of hours of learning.
 
@@ -69,7 +69,7 @@ school fights
 
 )
 
-## Remembering for half-a-century
+## 19.5 Remembering for half-a-century
 
 How can knowledge be retained for 43 years?
 
@@ -97,7 +97,7 @@ SuperMemo insert. [What is SuperMemo?](https://supermemo.guru/wiki/What_is_Super
 
 I keep all my knowledge in [SuperMemo](https://supermemo.guru/wiki/SuperMemo). I do not need to remember the name "horse". We all remember horses. We see horses daily on TV, on the net, or even in real life. However, to remember names of horse colors or horse breeds, I need SuperMemo. Those do not show up often enough to stay in memory. After 1990, my knowledge of zoology survived largely due to [SuperMemo](https://supermemo.guru/wiki/SuperMemo). If I devoted a fraction of time wasted on commuting to school on SuperMemo, my knowledge would increase by an order of magnitude. Mobile technology would only help fractionally because [incremental learning](https://supermemo.guru/wiki/Incremental_learning) does not fare well on the go. There is an exponential increase in the return on investment with all marginal improvements to the adherence to the [natural creativity cycle](https://supermemo.guru/wiki/Natural_creativity_cycle). Only "mindless" repetitions would work on a bus. If I did not have to go to school, I could use most of my day on passionate learning. My knowledge might still be one-sided and monothematic for a longer while. However, I have proven that [I would open that history book sooner or later](https://supermemo.guru/wiki/Learning_history:_school_vs._self-directed_learning#How_I_started_liking_history). The extra time saved by not going to school might accelerate the process of broadening of my horizons. I am sure that **instead of being helpful, school slowed my progress**.
 
-## Schooling can easily kill passions
+## 19.6 Schooling can easily kill passions
 
 Personal anecdote. [Why use anecdotes?](https://supermemo.guru/wiki/Why_use_anecdotes%3F)
 
@@ -141,7 +141,7 @@ I see lots of 8-10 year olds with fantastic passions. It does not really matter 
 
 From decade to decade we crank up the pressure of schooling. We push kids harder and harder to achieve more and more. In the process, **schools are highly efficient killers of childhood passions and the learn drive**. This is highly detrimental to further progress of mankind
 
-## Summary: Childhood passions
+## 19.7 Summary: Childhood passions
 
 - minor events in childhood can turn into lifelong passions
 - child passions have a dramatic positive impact on the power of the [learn drive](https://supermemo.guru/wiki/Learn_drive)
