--- a/我再也不会把孩子送去学校/21.Mountain climb metaphor.md
+++ b/我再也不会把孩子送去学校/21.Mountain climb metaphor.md
@@ -1,6 +1,6 @@
-# Mountain climb metaphor
+# 21 Mountain climb metaphor
 
-## Education is a mountain to climb
+## 21.1 Education is a mountain to climb
 
 The **mountain climb metaphor** is helpful to understand why the concept of [schooling](https://supermemo.guru/wiki/Schooling) is so pervasive despite being highly harmful. The metaphor explains that we cannot improve upon optimization without using optimization tools. The metaphor extends to many areas of life. It extends to many ailments that torment humankind today.
 
@@ -14,7 +14,7 @@ In [schooling](https://supermemo.guru/wiki/Schooling), adults have a distorted v
 
 A child's brain is different than an adult's brain. For [neurobiological reasons](https://supermemo.guru/wiki/Childhood_amnesia), the adult has no way of remembering the difference. The adult cannot empathize with a child's learning process, and must step away to let it [run naturally](https://supermemo.guru/wiki/Free_learning). The shortcuts proposed by adults are counterproductive. The first thing we should learn at school or in life are the wonders of the world. In terms of the [curriculum](https://supermemo.guru/wiki/Curriculum), chemistry should precede the alphabet, physics should precede counting sequences, biology should precede reading. We turn it all upside down, and then poison the chalice by making it all compulsory. In a mix with authoritarian parenting, this is a path to the loss of [love of learning](https://supermemo.guru/wiki/Pleasure_of_learning), [hate of school](https://supermemo.guru/wiki/Why_kids_hate_school%3F), hate of people, [bullying](https://supermemo.guru/wiki/Bullying), depression, drugs, mental disorders, and more. Kids without freedom make as much progress as inmates in a tough prison: instead of re-socializing, they get worse.
 
-## Hindsight is not 20/20
+## 21.2 Hindsight is not 20/20
 
 In terms of [schooling](https://supermemo.guru/wiki/Schooling), *"hindsight is blurry while appearing to be 20/20"*. It comes from a typical illusion that affects the post-factum perception of neural optimization, or optimization in general. It comes from the [curse of knowledge](https://supermemo.guru/wiki/Curse_of_knowledge). All things that used to be difficult in the past, now may seem simple.
 
@@ -26,9 +26,9 @@ The never-ending drive to begin academic instruction at ever earlier ages is sim
 
 Early academic instruction without the consent of the child is inhumane and a violation of a child's rights
 
-## Mountain climb example
+## 21.3 Mountain climb example
 
-### Cultivating childhood passions
+### 21.3.1 Cultivating childhood passions
 
 The [Mountain climb metaphor of schooling](https://supermemo.guru/wiki/Mountain_climb_metaphor_of_schooling) explains how the optimization of education can lead to a blind path of inefficient learning.
 
@@ -50,7 +50,7 @@ Importantly, all those interests in astronomy and physics can and should occur a
 
 In children with rich interests, passions can quickly cover many areas of the typical high school curriculum. The coverage may be highly superficial in terms of the specific material. However, only the actual long-term knowledge matters in the comparison. With that in mind, knowledge of [homeschoolers](https://supermemo.guru/wiki/Homeschooling)and [unschoolers](https://supermemo.guru/wiki/Unschooling) is usually vastly superior in terms of [stability](https://supermemo.guru/wiki/Stability) and [coherence](https://supermemo.guru/wiki/Coherence). This is the kind of knowledge that boasts a high degree of applicability. This is the knowledge that makes the difference in life. Our exemplary student with the ultimate PhD in astrophysics will retain her [childhood passions](https://supermemo.guru/wiki/Childhood_passions) and pursue a career, e.g. in science, with zeal and joy.
 
-### Replicating passions at school
+### 21.3.2 Replicating passions at school
 
 The problem may begin when [curriculum](https://supermemo.guru/wiki/Curriculum) designers try to trace backwards the development of an expert in astrophysics. It is instantly tempting to skip the ET movie, exoplanets, and ban signs of zodiac as superstitious. YouTube may not be included as it is full of potential distractions. Monothematic focus is the key to the method and a straight path to boredom. First months at school are spent on drilling the letters of the alphabet: 3 days per letter. It is easy to deprive the [curriculum](https://supermemo.guru/wiki/Curriculum) from all vestiges of extraneous material that could spark new passions. High volume of learning, high [interference](https://supermemo.guru/wiki/Interference), high degree of [coercive learning](https://supermemo.guru/wiki/Coercive_learning), can quickly lead to the loss of the [learn drive](https://supermemo.guru/wiki/Learn_drive) via [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness). Some kids may still enjoy long days devoted to learning the alphabet (e.g. through the talents of the early teacher). Few will retain their love for mathematics by the age of 10. Most will [hate their schooling experience](https://supermemo.guru/wiki/Why_kids_hate_school%3F) by the time they are 15. There will always be some time reserved for movies, but the experience can easily be ruined by a tired brain: *"You can watch that movie once your homework is done!"*. Some of the high school graduates may still opt for a career in astrophysics. However, without a true passion, this kind of joyless pursuit in bound to result in fewer breakthrough achievements.
 
@@ -58,7 +58,7 @@ The problem may begin when [curriculum](https://supermemo.guru/wiki/Curriculum) 
 
 > **Figure**:When coercive learning based on a curriculum attempts to replicate a success of a child who follows its passions to a PhD in astrophysics, exploratory learning is diminished. It is replaced with linear learning devoid of passion. Knowledge loses on coherence. Comprehension is poor. Poor stability undermines the longevity of knowledge. Career in science is hardly possible. When such career is undertaken, it may be joyless and low on creative fruits
 
-## Parody of the future
+## 21.4 Parody of the future
 
 If the evolution of the school system proceeds at the present rate in the present direction, we will soon teach newborns to read books about the subject of walking. This will ensure they master the theory of walking before the practice of walking. Overtime, we might even defer actual walking to later ages, or even adulthood. This is what we seem to be doing with independence and creative thinking. We defer all the challenges to the time beyond college. And then we send kids out to the world to sink at the deep end of the pool.
 
