--- a/我再也不会把孩子送去学校/7.Learn drive vs. learned helplessness.md
+++ b/我再也不会把孩子送去学校/7.Learn drive vs. learned helplessness.md
@@ -1,6 +1,6 @@
-# Learn drive vs. learned helplessness
+# 7 Learn drive vs. learned helplessness
 
-## Loss of learn drive with age
+## 7.1 Loss of learn drive with age
 
 The claim that we lose the [learn drive](https://supermemo.guru/wiki/Learn_drive) with age is dangerous. We accept the fact that students get gradually less passionate about learning. This perpetuates the parasitic myth that learning is hard, school is boring, and that these facts should be accepted like death and taxes. We are supposed to hate school as much as we hate our jobs. We are supposed to grin-and-bear it (see: [The grind is the glory](https://supermemo.guru/wiki/The_grind_is_the_glory))! This myth is stealing youth from the young generation and the love of life from millions of people. The effects of lost [learn drive](https://supermemo.guru/wiki/Learn_drive) do their damage deep into adulthood.
 
@@ -12,13 +12,13 @@ The school system is inherently dangerous as it includes a number of mechanisms 
 
 When studying depression, scientists employ the concept of **learned helplessness**. They use rats and a forced swim test to explore it. When rats are closed in a tub of water with no route of escape, they tend to swim around for several minutes in search of an exit. After a while they give up. In repeated tests, they tend to swim less and less. They learn the situation is beyond their control and there is no point in trying. The timing of such tests may determine the extent of long-term consequences, e.g. in the function of the amygdala, which may result in depression in adolescence. The rule of the thumb is that the lower the age of abuse, the longer the extent of the consequences. A milder form of such adaptation is what students experience in a classroom. A healthy, 5 year old will violently oppose boredom. Exposed to schooling and monodrone lecturing, the kid disciplined into sitting still in a bench will gradually behave like a rat in a forced swim test. Apathy will set it. The kid will experience behavioral shutdown. Schooling becomes a form of training where tolerance of the absence of novelty is trained into the young brain. This is the opposite what educators should aim at. We should strive at keeping kids impatient and rebellious. Give them the sense of entitlement for knowledge. Boredom should be intolerable. Knowledge can be a form of entertainment, and school should be fun. Entitlement to fun is nothing wrong!
 
-## Neural withering
+## 7.2 Neural withering
 
 Learned helplessness is at the core of the adverse classroom conditioning. However, in addition, schooling creates a perfect storm of other adverse conditions, of which violations of sleep hygiene and exposure to stress are most important. Those in turn entail a chain of wide-ranging consequences such as depression, obesity, addictions, risk-taking, aggression, cruelty, etc. This is a perfect storm for inducing [neural withering](https://supermemo.guru/wiki/Stress_reduces_neurogenesis). Young brains are conditioned in a bath of hormones that stifle neurogenesis and promote unfortunate synaptic pruning. This is a type of conditioning that is aimed against the penalties of helplessness. This conditioning results in extinction of behaviors targeted at exploration. This is a formula for setting an apathetic brain in stone. When kids leave school, their brains are set for life of conformity and unhappiness. In that light, it is surprising that some kids are still able to thrive. I explain elsewhere what makes for a model of a happy student. However, that model will suit only a few. There is also a rebellious student who tends to ignore the system and survive ok.
 
 **In the conveyor belt of mass education, most of students get the short end of the stick**.
 
-## Learned helplessness at school
+## 7.3 Learned helplessness at school
 
 There are many ways brains adapt to the environment.
 
@@ -40,7 +40,7 @@ Educators keep forgetting that **focus and creativity stand in opposition and a 
 
 **Learned helplessness** is the mechanism by which students gain classroom focus **at the cost of creativity**. In the process, they gradually **lose their learn drive**.
 
-## Kids in a container
+## 7.4 Kids in a container
 
 [John Taylor Gatto](https://en.wikipedia.org/wiki/John_Taylor_Gatto) is a world famous critic of compulsory schooling. He was an award-winning teacher who quit in 1991 in protest against the way "school made him [hurt children](https://supermemo.guru/wiki/John_Taylor_Gatto:_I_refuse_to_hurt_children)".
 
@@ -52,7 +52,7 @@ Gatto, who spend 3 decades as a teacher, felt like he was hired to act as a lid 
 
 > **\*Figure:** Even if children hate school they accept their fate via learned helplessness. This destroys their natural love of learning, suppresses natural creativity, deprives of independence, and may lead to mental disorders later in life (picture source: Wikipedia)*
 
-## Learned helplessness at daycare
+## 7.5 Learned helplessness at daycare
 
 The same scary process may already begin in daycare where kids learn to overcome separation anxiety "disorder". Separation anxiety is a normal instinctive reaction to the absence of the primary caregiver, esp. in the natural breastfeeding window. That window is not your textbook 6 months. It might be as long as 3-5 years. We just never seem to see it in modern world that intervenes even in that most intimate process. As a population, we have no idea that natural weaning may take that many years! We need to look at [hunter-gatherer societies](https://supermemo.guru/wiki/Hunter-gatherer_childhood) to find the truth. When late weaning happens in the western world, it is seen as an aberration. Even a [sexual aberration](https://supermemo.guru/wiki/Breastfeeding_as_sexual_perversion).
 
@@ -66,11 +66,11 @@ Child's optimum nap time depends on the natural waking time. If natural waking i
 
 The bigger the cognitive space the lesser the need for adaptations that will limit future explorations. The bigger the space the bigger the rewards from explorations via the [novelty seeking guidance system](https://supermemo.guru/wiki/Learn_drive). Most parents love well-disciplined kids who obey orders, follow the rules, and minimize disruption. This is achieved well at daycare and this is often met with delight. However, those procedures limit exploratory nature of the young brain and [may also result in worse long-term outcomes](https://supermemo.guru/wiki/Learning_acceleration_via_stress). All parents should be aware that **less discipline may be good for a thriving brain**. The term "spoilt brat" should be retained solely for kids who violate the basic rules of decency. Otherwise, **let your kid be spoilt until its brain is strong enough to become a model citizen. This process may take three decades!**
 
-## Your brain is great!
+## 7.6 Your brain is great!
 
 My writing about learned helplessness may sound a bit dramatic or even depressing. I hope it is taken to heart by parents and teachers. However, if you strive at high creative achievement, and recognize some stories or symptoms in yourself, this is not the time to slow down and look for your own limitations. I write elsewhere about the magic extent of the adaptive powers of the human brain. With hard work you can restore a great deal of your [learn drive](https://supermemo.guru/wiki/Learn_drive), creativity, or zest for brainwork. Some of the potential might have been lost. Lost brain connection will never be the same. However, for the brain, where one door closes, another opens. Lost skills get compensated in new areas. Personality changes can make you suitable for new and different occupations. It is conceivable that things we consider "*bad for the brain*" may actually turn your life for the better in some circumstances. Do not slow down.
 
-## Summary: School and learn drive
+## 7.7 Summary: School and learn drive
 
 - Compulsory schooling suppresses the [learn drive](https://supermemo.guru/wiki/Learn_drive)
 - Most kids adapt to the compulsion of schooling via learned helplessness
