--- a/我再也不会把孩子送去学校/8.Education counteracts evolution.md
+++ b/我再也不会把孩子送去学校/8.Education counteracts evolution.md
@@ -1,6 +1,6 @@
-# Education counteracts evolution
+# 8 Education counteracts evolution
 
-## Inefficiency of education
+## 8.1 Inefficiency of education
 
 The education system design counters half a billion years of the evolution of the nervous system
 
@@ -8,7 +8,7 @@ Ever since the Cambrian Period, animals kept improving their ability to explore 
 
 If you ask your teacher, headmaster, or even your education minister, chances are pretty high, he or she is unaware of the problem. There is a lot of talk of [reform](https://supermemo.guru/wiki/Reform), emphasis on creativity, independence, [freedom](https://supermemo.guru/wiki/Free_learning), or [problem solving](https://supermemo.guru/wiki/How_to_solve_any_problem%3F). However, the key design flaw puts a spanner in the works even if people involved in running education are preponderantly knowledgeable, and sport good intuition about the ailments of the system. Most educators today score well on knowledge. They score great on their love for children. However, they keep [treading water](https://supermemo.guru/wiki/Why_schools_fail%3F). Every year, schools release masses of kids with knowledge and skills that are a fraction of the human natural potential.
 
-## Exploration algorithm
+## 8.2 Exploration algorithm
 
 All effective learning processes in nature are based on exploration. [Exploration](https://en.wikipedia.org/wiki/Exploration_problem) has been modelled accurately in artificial intelligence for decades. It permeates nearly all branches of computer science with various mutations of the search algorithm. For a visualization on a non-linear nature of the [A* search](https://en.wikipedia.org/wiki/A*_search_algorithm)see this [short video](https://www.youtube.com/watch?v=J-ilgA_XNI0).
 
@@ -22,27 +22,27 @@ The whole process can be compared to an exploration of a labyrinth in a situatio
 
 Efficient learning is based on exploration. While exploring the labyrinth of life, we look for jigsaw pieces of information that match the puzzle of knowledge. As we keep exploring, we build the jigsaw puzzle. This way a rat may explore an island as depicted [here](https://supermemo.guru/wiki/On_the_superiority_of_a_rat_over_a_schooled_human)
 
-## Evolving imitation
+## 8.3 Evolving imitation
 
 500,000 years ago, on a savannah, early Homo sapiens used exploration to learn about plants, animals, food, dangers, etc. The process was not much different from the one used by a [rat on an island](https://supermemo.guru/wiki/On_the_superiority_of_a_rat_over_a_schooled_human). However, humans developed a strong inclination towards imitation. **Imitation provides a shortcut in the exploration tree**. It makes it possible to jump from one branch to another at little cost. Valid imitation leads to a valid incremental inserts in the [jigsaw puzzle](https://supermemo.guru/wiki/Jigsaw_puzzle) of knowledge.
 
 Imitation is the first step towards perpetuation of knowledge and speeding up the collective exploration algorithm, in which human brains pull together across generations to accumulate mankind's wisdom. If any individual in the group finds a solution to a problem, the others may imitate and traverse the maze without wasting time on exploration of dead branches. This trick is employed by an ant colony too for maximizing the yield in food gathering. However, imitation has reached its acme in the human species. Back in the day, I was good at pulling up on the rod. I was the best in class. Today, in street workout, I feel like an old klutz. All teens are now educated on YouTube. All forms of unthinkable acrobatics become a commonplace. Kids love to imitate in the quest for their goals.
 
-## Imitation vs. novelty seeking
+## 8.4 Imitation vs. novelty seeking
 
 Imitation is great to speed up learning, however, it also carries a risk of failing to explore the entire search space, or failing to adapt to changes in the environment, or to changes in needs. This is why it is beneficial to occasionally explore unexplored branches even when imitation provides a solution. For a population, it is highly advantageous to have a group of avid explorers who will risk their life to find new lands or planets. Their occasional *"Eureka!"* may provide a new path for the rest of the group. In the area of imitation, humans have spurted well ahead of the apes. Humans explore less and imitate more. Imitation is the first step to the record of history. However, to survive, we need to retain the quest for novelty.
 
-## Language, religions, and war
+## 8.5 Language, religions, and war
 
 The real breakthrough came with the development of the language and the development of the print. Now we can perpetuate history of discovery and minimize straying. With the fixed record of historic achievement, we need eager explorers even more. We need a bit of collective [forgetting](https://supermemo.guru/wiki/Forgetting), and a great deal of contrarian exploration. This is where we need [ADHD](https://supermemo.guru/wiki/ADHD) kids. Instead of dumbing them down with Ritalin, we should let them explore (see: [Caging a puppy](https://supermemo.guru/wiki/Would_you_have_a_heart_to_cage_a_puppy%3F)). They risk their lives for the collective benefit.
 
 With the arrival of well-established religions, and the advent of massive armies, we have been tempted to improve upon imitation by "rational" design. Religions provide a code of conduct that makes sure the followers imitate the prescription from the gods. Military leaders build armies and drill rules of behaviors that deprive the individual of the self to the benefit of the massive movement of the cannon fodder. A Prussian army behaves like a perfectly-programmed robot in which one soldiers receives the program, and others imitate.
 
-## The advent of mass education
+## 8.6 The advent of mass education
 
 It is only natural that imitation is used massively in education. The teacher makes the show, and the kids repeat. By mastering calculus, they do not need to retrace the footsteps of Newton. This is fantastically effective. New generations can now focus on solving new problems using previously discovered tools. With the success of early schools, with an increase in literacy, with an increase in numeracy, we could see that education can solve many problems facing humanity. We fell in love with imitation and rushed ahead too far. You can stroke a cat to death, and we nearly did!
 
-## Coercive immitation
+## 8.7 Coercive immitation
 
 The next seemingly logical step in improving education is to introduce coercion. If imitation is so effective, why not make it compulsory to the benefit of society? The right to education became universal. Overtime, the right became a duty. The reasoning is similar to the rationale behind vaccination. If we educate most of the citizenry, we can run a new kind of society with a myriad of new rules and new solution that advance the civilization. Importantly, good education serves the individual. If this is good for a citizen and for society, making it compulsory cannot be considered a violation of human rights. In the course of evolution, coercion has also proven efficient and popular. In a shoal of fish, ironically called *"a school"*, not a single one can make a wrong move, or the whole school will turn into a massive freeway pileup.
 
@@ -50,17 +50,17 @@ The next seemingly logical step in improving education is to introduce coercion.
 
 > **\*Figure:** Multi-seat toddler desk is a preschool torture device. The brain says "keep exploring". The authoritarian teacher says "Stop moving! Read my lips!". For more see: Would you have a heart to cage a puppy?*
 
-## Resistance to social pressure
+## 8.8 Resistance to social pressure
 
 The problem with the transition from imitation to coercive imitation is that it destroys the exploratory algorithm designed by millions of years of evolution. The evolution delivered the most efficient brain machinery responsible for learning. Sometime during the evolution of birds and mammals, populations developed more advanced forms of social life. [Social intelligence is based on learning](https://supermemo.guru/wiki/Optimal_socialization), which can be accelerated with imitation. However, the purpose of social groups is to co-operate and act in harmony. For social life to evolve efficiently, individuals needed to develop mechanisms that would efficiently interweave coercion in the learning system.
 
 If social coercion worked perfectly, it would be like a perfect imitation. It would lead to inhibited exploration that could backfire in the long run. For that, a degree of **resistance to coercion** need to be injected into the efficient algorithm. Resistance occurs when exploration is curbed by social pressure. Social pressure may add to the penalty system, but is treated differently than other penalties such as pain. Non-social penalties may stop an exploration of a branch. Resistance to social penalties will result in backtracking on the exploration tree. **Resistance results in forgoing fruits of exploration**. Fruits are forgone in the name of independence. This gave the biological origin to Zapata's: *"I'd rather die on my feet, than live on my knees"*
 
-## Resistance to extrinsic valuation
+## 8.9 Resistance to extrinsic valuation
 
 In addition to the exploratory value of resistance, the goals of a community and the goals of an individual may often be contradictory. A well-exploring brain cannot accept the situation in which his learning capacity is hijacked to fulfill the goals of another individual: [the bully](https://supermemo.guru/wiki/Bullying). The key to social intelligence is an intelligent resistance mechanism that will prevent extrinsic valuations in the goal tree (see: [Knowledge valuation network](https://supermemo.guru/wiki/Knowledge_valuation_network)). The teacher is powerless. She cannot motivate kids [extrinsically](https://supermemo.guru/wiki/Extrinsic_motivation). Persuasion has its limits.
 
-## Variations of resistance in a population
+## 8.10 Variations of resistance in a population
 
 For exploratory reasons, and for independence reasons, the resistance is highest for young risk-taking individuals. If a parent tried to force a child to follow a specific exploratory path, she will meet with a degree of resistance. Very often, the child will attempt to do the opposite. This is the evolution's way of saying: "*you guys explored that path, I will gladly risk my life to try something new*". The same resistance algorithm is the key to the failure of schooling. [Coercive learning](https://supermemo.guru/wiki/Coercive_learning) does not work.
 
@@ -70,13 +70,13 @@ Via personality traits, genes have an important impact on exploration, imitation
 
 Similarly, children differ by their resistance to coercion and to their sensitivity to peer pressure. Some will always look up to their parents for approval. Each new move they make, they look up. Others will keep exploring without heeding the presence of others. Those unruly kids will react with violent resistance to all forms of imposition. If you tell them, "go right", they will always turn left. This is how they can help the population discover new pathways.
 
-## Wieman drafts the future of exploratory learning
+## 8.11 Wieman drafts the future of exploratory learning
 
 Compulsory schooling tramples upon the natural exploratory algorithm based on the [learn drive](https://supermemo.guru/wiki/Learn_drive). Future education will take a full advantage of exploration. [Carl Wieman](https://supermemo.guru/wiki/Carl_Wieman) is one of those who could see the problem and who devoted his Nobel Prize winnings to provide a light in the tunnel. His [science simulations](https://supermemo.guru/wiki/PhET_simulations) provide a natural exploratory environment for children and scientists alike.
 
 Wieman noticed that imitation via linear presentation often breaks on a single bad label, or a single gap in knowledge. If the branch reward keeps dropping, the urge to explore decreases. Wieman simulations require few concept labels and minimum prior knowledge. Each simulation is an independent capsule of reality. Wieman simulations are like little virtual worlds of science to explore. This is the best way of exploring scientific models in existence (in addition to the life in real).
 
-## Incremental reading is based on exploration
+## 8.12 Incremental reading is based on exploration
 
 In the domain of written records, the same exploration can be undertaken with [incremental reading](https://supermemo.guru/wiki/Incremental_reading).
 
@@ -86,7 +86,7 @@ In [incremental reading](https://supermemo.guru/wiki/Incremental_reading), a stu
 
 The bigger the [knowledge tree](https://supermemo.guru/wiki/Knowledge_tree) the wider the range of reward options. [Curiosity](https://supermemo.guru/wiki/Learn_drive) should be cultivated. Comparing pleasurable learning to a dopamine drip is a highly harmful metaphor. If social media provide the best reward, it only comes from the crippling effects of the environment on the other competing branches of knowledge. If school makes one hate mathematics, it may make one love Instagram that much more.
 
-## Two key errors of education systems
+## 8.13 Two key errors of education systems
 
 **Imitation** and **resistance** are vital parts of the **exploratory algorithm** hard-coded in the human brain. The **first error of education** is to provide a linear [curriculum](https://supermemo.guru/wiki/Curriculum), which is the supposed straight pathway to wisdom (as opposed to a **set** of **recommendations**). Curriculum provides imitation with curbs on exploration. However, this is a misguided imitation as it does not take into account the status of the [jigsaw puzzle](https://supermemo.guru/wiki/Jigsaw_puzzle_metaphor) that is being built. It is too easy to make a bridge to nowhere. All kids are to imitate at the same time, at the same pace, and all mutations in the trajectory, instead of improving upon exploration, will gradually lead to the [collapse of imitation](https://supermemo.guru/wiki/Knowledge_crystallization). Your typical school will not let you leave the first grade by taking a kid chemistry exam. You need to do your alphabet and numbers first. The **second error of education** is to make curriculum compulsory. Compulsory education triggers resistance that interferes with imitation and seed chaos into the process. The imitation trajectory is no longer predictable. Pre-designed imitation makes it fall apart. Triggered resistance makes imitation fall apart faster. At first, kids stop exploring, and then they stop imitating. In the end, they may hate school and learning in equal measure. [War of the networks](https://supermemo.guru/wiki/War_of_the_networks) leads to[ learned helplessness](https://supermemo.guru/wiki/Learned_helplessness), apathy and depression. By trying too hard, we are building an unhappy society.
 
@@ -94,13 +94,13 @@ The bigger the [knowledge tree](https://supermemo.guru/wiki/Knowledge_tree) the 
 
 > **\*Figure:** Even if children hate school they accept their fate via learned helplessness. This destroys their natural love of learning, suppresses natural creativity, deprives of independence, and may lead to mental disorders later in life (picture source: Wikipedia)*
 
-## Overoptimization
+## 8.14 Overoptimization
 
 The education systems employ the tools that are basically functional. However, in the never ending quest for better performance, we [arrived to the point of absurdity](https://supermemo.guru/wiki/PISA). What used to work in the past has now turned into a monster that keeps the kids unhappy and poorly educated. Many educators seem to follow linear reasoning: if a glass of water rejuvenates, drinking a tub might perhaps make someone immortal. This is a maximization based on wrong criteria. Instead, we need to [optimize education](https://supermemo.guru/wiki/Optimization_of_education). [Free learning](https://supermemo.guru/wiki/Free_learning) is the simplest approach to optimizing education. It costs nothing and comes naturally. All healthy kids are born with a powerful exploratory algorithm hard-coded in their brain. If schools [damage the control systems](https://supermemo.guru/wiki/War_of_the_networks)involved in that algorithm, they harm societies, and lead to a multitude of aberration that torment modern populations.
 
 Compulsory schooling triggers mechanisms that block exploratory learning that underlies efficient acquisition of knowledge and skills
 
-## The Grand Education Reform
+## 8.15 The Grand Education Reform
 
 The solutions to the woes of education have been known for decades now. Solutions are cheap and simple. However, the set of entrenched myths of education still keeps the reformers at bay.
 
