--- a/我再也不会把孩子送去学校/9.Toxic memory.md
+++ b/我再也不会把孩子送去学校/9.Toxic memory.md
@@ -1,16 +1,16 @@
-# Toxic memory
+# 9 Toxic memory
 
 A decline in the [learn drive](https://supermemo.guru/wiki/Learn_drive) as a result of bad learning may come from a lesser buildup of memories, and faster [forgetting](https://supermemo.guru/wiki/Forgetting). However, formation of parasitic and toxic memories may also be responsible for a gradual increase in the dislike of school and learning.
 
 
 
-## Hate of school
+## 9.1 Hate of school
 
 The hate of learning, hate of school, or the hate of a specific subject, such as math, are all based on the same mechanism: **toxic memory**.
 
 As it is possible to condition a Pavlov's dog to fear the sound of a bell, it is possible to condition a human being to panic at the sight of a math formula
 
-## What are toxic memories?
+## 9.2 What are toxic memories?
 
 For the purpose of [this book](https://supermemo.guru/wiki/Problem_of_Schooling), I propose new terms to describe unwelcome memories formed in the learning process:
 
@@ -31,7 +31,7 @@ The introduction of the term *toxic memory* is important as this type of memory 
 
 The ever faster processing of school [curricula](https://supermemo.guru/wiki/Curriculum), with mounting [interference](https://supermemo.guru/wiki/Interference) and disintegrating knowledge [coherence](https://supermemo.guru/wiki/Coherence) are a perfect ground for breeding toxic memories!
 
-## Toxic memory: mechanism
+## 9.3 Toxic memory: mechanism
 
 For a toxic memory to develop, only one factor needs to enter the picture in learning: **displeasure**. If a child, or even an adult, is expected to make an association between concepts A and B, the presence of the penalty signal may result in an association between A and the penalty.
 
@@ -41,7 +41,7 @@ Toxic memories, like all memories, are subject to generalization. This is how a 
 
 Toxic memories can be prevented easily by full compliance with the [Fundamental law of learning](https://supermemo.guru/wiki/Fundamental_law_of_learning).
 
-## School: an unhappy institution
+## 9.4 School: an unhappy institution
 
 The concept of [toxic memory](https://supermemo.guru/wiki/Toxic_memory) makes it easy to explain the inherent inefficiency of schooling.
 
@@ -53,7 +53,7 @@ The same happens at school. Kids quickly get conditioned to see school as a plac
 
 **The school system is an inherently unhappy structure**. It has an uncanny ability to turn learning, one of the [greatest joys of life](https://supermemo.guru/wiki/Pleasure_of_learning), into a form of mental torture.
 
-## Early learning programs
+## 9.5 Early learning programs
 
 It is an adult-centric point of view: the whole learning process is based on reading, reading is based on decoding texts, texts are made of letters. As the alphabet is the underlying basis of whole learning, it is easy for an adult to believe that kids should learn the alphabet early, and take on reading early. Early reading programs make it explicit: early reading makes your kids smarter. In reality, the opposite may happen. Early reading program can condition a dislike of reading and make your kids dumber.
 
@@ -71,33 +71,33 @@ The same is true of math. Kids drilled on digits, numbers and counting, may deve
 
 For some adults, multiplication table integrates with their math brain and is employed dozens of times in a single day. For others, toxic memories formed by early drilling keep it out of reach for lifetime. Some adults never confuse left and right, others will try to recall on which hand they keep a watch or where the heart is located in their chest. These minor inefficiencies are nearly always a result of heavy drilling in childhood. Two factors are to be blamed in most cases: (1) **stress**or (2) **coercion**.
 
-## Mathematics
+## 9.6 Mathematics
 
 Mathematics is the queen of science. It is also a queen of toxic memory. The reason is not that mathematic is more difficult than chemistry or literature. The key reason is that mathematic uses its own language of formulas. [Formulas form a perfect abstraction](https://supermemo.guru/wiki/Abstract_knowledge) if they do not get associated with the meaning of individual variables or terms. If you fail to remember the answer to *What is the capital of Thailand?*, you are soothed by the fact that the question is posed in English and you might have heard of Thailand. If you fail to remember *log(x\*y)=?*, you might have just experienced gibberish and your only reaction is an increase in stress levels. *Math anxiety* is nothing else but a sufficiently large set of toxic memories associated with mathematics. Those memories may generalize onto many contexts in which you meet mathematics. It may even happen that you will be traumatized for life. You may hate all books in yellow cover just because of that most hated book in math that had a yellow cover too.
 
 See also: [Benezet experiment on the impact of early math instruction](https://supermemo.guru/wiki/Early_math_instruction_may_backfire)
 
-## Alzheimer's disease
+## 9.7 Alzheimer's disease
 
 You must have heard that learning prevents Alzheimer's. Scientists noticed that years of schooling add to reducing your chances for that disease. However, few reports seem to consider the difference between [good learning](https://supermemo.guru/wiki/Pleasure_of_learning) and bad learning that involves forming toxic memories. The root cause of Alzheimer's is *network overload* and associated *excitotoxicity*. This is compounded by genetic predispositions, diet, lifestyle, etc. However, without network abuse, the neurodegenerative process might not show up. The same problem might be occurring in Down syndrome kids. Their brain processing power is simply diminished. This is why toxic memories might also be bad for brain health. For more see: [How schools can contribute to Alzheimer's disease](https://supermemo.guru/wiki/How_schools_can_contribute_to_Alzheimer%27s_disease) and [Bad learning contributes to Alzheimer's](https://supermemo.guru/wiki/Bad_learning_contributes_to_Alzheimer%27s).
 
-## Examples
+## 9.8 Examples
 
 I have built up a large collection of stories about the origin and character of toxic memories. I will mention a few examples here.
 
-### Fear of fractions
+### 9.8.1 Fear of fractions
 
 I spoke to a young lady who uses a calculator at work for a few hours per day. Despite this, her math skills are negligible. She is interested in sociology. Even in sociology, considered a branch of humanities, math plays a big role. She never reads books soaked with formulas, but even statements like "one third" of a population or "one tenth" of a population are scary. Somehow 33% and 10% sound much friendlier because she meets percentages on a daily basis at work. How can an intelligent lady with college education struggle with such seemingly simple concepts? I could track it back to her childhood. She claims she was not under a tremendous pressure to learn math. Just the opposite. Her teachers did not seem to care. However, I quickly disproved that claim by finding out that at older ages, the pressure started mounting up. She would not want to disappoint her parents and meeting math class minima started getting harder and harder. Today, fractions *"make her stiff"*. When I explain that the problem of 1/10 and 1/3 can be easily solved by just memorizing 8 pairs: 1/2=50%, 1/3=33%, ... 1/10=10%, she smiled as if I summarized the Book of Revelations. How is that possible that for nearly a decade since college, in a job that involves math, with intelligent reading, with interest in the news on TV, etc. she did not come up with a simple idea of memorizing 8 numbers? The explanation might only be in toxic memories. Her brain developed a pathological reaction to the sight of fractions: panic! In a panicky state, she cannot see the big picture, she cannot slow down, she cannot think straight. This is not math anxiety. This is math phobia grown to the size of math panic.
 
-### Fear of reading
+### 9.8.2 Fear of reading
 
 A child can have dramatically different reactions to the same letter or to a sequence of characters depending on the context. Coercive programs for early reading are notorious for sparking toxic memories. A sequence of letters mastered in the context of happy play may bring aversion and hate of learning if presented in the context associated with [learning coercion](https://supermemo.guru/wiki/Coercion_in_learning). A hypothesis says that [this is how dyslexia may develop](https://supermemo.guru/wiki/Can_coercion_cause_dyslexia%3F) in a subset of cases. [Democratic schools](https://supermemo.guru/wiki/Democratic_school) boast of knowing no dyslexia. In a democratic school, kids can learn to read at their preferred age, sometimes even in teen years. [Raymond Moore](https://supermemo.guru/wiki/Raymond_Moore) insists that reading remedial programs are populated primarily by kids recruited from early reading programs, and other programs where coercion might be in use. It is enough for an early reading program to generate minor gaps in knowledge, e.g. knowledge of phonics, those gaps may later snowball into reading difficulties that will be interpreted as a penalty. This penalty signal is enough to develop a toxic memory: dislike or fear of reading.
 
-### Multiplication table
+### 9.8.3 Multiplication table
 
 Many adults fail to master the multiplication table. It is amazing to see people who deal with numbers on a daily basis, and still struggle with simple multiplication. An omnipresent calculator masks the phenomenon. I personally know a few cases of high-IQ individuals who struggle with multiplication table. They seem to agree that [heavy drilling in early childhood](https://supermemo.guru/wiki/Abandon_early_math_instruction!) is the chief culprit. Once toxic memories get etched in young networks, they are very hard to dislodge. For anyone fluent in multiplication, struggling with 7*8 seems hardly possible. If smart people who struggle with 7*8 did not keep hiding their problem, we might finally stop attributing this to lesser cognitive capacity. A toxic memory can easily make anyone look less clever than they really are. It is not about intelligence or memory, it is all about *"brain panic"*. The question *7\*8=?* brings the following response in the affected mind: *OMG! Multiplication table again! I will sure fail ... was it 49, 56 or 63 ... I knew it, ... is anyone looking? ... no, no chance .. no idea ... I hate my life ...*.
 
-### Sequence of months
+### 9.8.4 Sequence of months
 
 I have documented a case of a girl who struggled with memorizing the sequence of months in childhood. The case might go unnoticed in a mass of similar cases, if the same girl did not show that learning the same sequence of months in German a decade later appeared surprisingly easy. Even more, the newly established sequence of month in German served as an early prop for memory issues with the same sequence in Polish. Amazingly, this highly intelligent lady, now in her late twenties, still uses the German sequence of months each time she confuses Polish names. To add spice to this unusual case, her German is now in serious retreat. She does not use the language too often. However, the sequence of months is absolutely unforgettable. She now uses it as a mnemonic skeleton to cover up the set of toxic memories developed in childhood.
 
@@ -107,11 +107,11 @@ This case hints powerfully at a wrong interpretation of the case of [bilingual b
 
 Paradoxically, early instruction is rampant in highly intelligent and highly literate families. In addition, all delays are noticed earlier, and intervention is more likely. This usually makes things worse.
 
-### Delaying math instruction
+### 9.8.5 Delaying math instruction
 
 When people I love are in a fight, the subject deserves double attention. [Peter Gray](https://supermemo.guru/wiki/Peter_Gray) is the most inspiring contemporary light in the area of [unschooling](https://supermemo.guru/wiki/Unschooling). Larry Sanger is a fantastic [homeschooling](https://supermemo.guru/wiki/Homeschooling) dad. Incidentally, Larry also invented Wikipedia for which I will be forever grateful. When Larry got upset with Gray, it was all about understanding the power of **toxic memory**. See: [Peter Gray under attack from Larry Sanger](https://supermemo.guru/wiki/Peter_Gray_under_attack_from_Larry_Sanger).
 
-### Fear with no purpose
+### 9.8.6 Fear with no purpose
 
 Toxic memories can paralyze the mind. They can turn an otherwise smart human being into a replica of an enslaved robot. The not-so-funny joke below delivered one of the most convincing personal moments in my investigations:
 
@@ -133,7 +133,7 @@ Outwardly, our abstract adult brain can see the same math problem to solve. Our 
 
 Misemployment of the [learn drive](https://supermemo.guru/wiki/Learn_drive), the genius neural mechanisms developed in the course of evolution, is the key [tragedy of modern mass education](https://supermemo.guru/wiki/Problem_of_schooling)
 
-### Meaningless history
+### 9.8.7 Meaningless history
 
 Do you know history? Did you know that
 
@@ -141,39 +141,19 @@ Do you know history? Did you know that
 
 If you love history, you will love the story of [futile memories related to Charlatid](https://supermemo.guru/wiki/Futility_of_schooling). See also another example in: [Unpleasant learning at school](https://supermemo.guru/wiki/Unpleasant_learning_at_school)
 
-### Trouble with counting
+### 9.8.8 Trouble with counting
 
 [20 rules of knowledge formulation](https://supermemo.guru/wiki/20_rules_of_knowledge_formulation) warn that memorizing sets can lead to toxic memory. That warning is applicable to adults, let alone children. Lists are easier, but also hard. At the same time, early schooling programs are peppered with lists to memorize. One of the first elements of early instruction is counting. While counting fingers is strongly mnemonic, going beyond the number 10 enters the realm of abstraction. Forcing kids to go into abstract territory is always dangerous. It is far better to patiently await the point of readiness. This sad story illustrates why: [Videogames are better than teachers](https://supermemo.guru/wiki/Videogames_are_better_than_teachers).
 
-## Toxic memories in SuperMemo
+## 9.9 Toxic memories in SuperMemo
 
 Futile memories are poorly formed and hard to remember even with [SuperMemo](https://supermemo.guru/wiki/SuperMemo). Persistent and parasitic memories may be perpetuated by [SuperMemo](https://supermemo.guru/wiki/SuperMemo). Toxic memories are most dangerous. They will result in learning displeasure, dislike of [SuperMemo](https://supermemo.guru/wiki/SuperMemo), and might be the number one reason for a high dropout rate in [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition).
 
-### SuperMemo leeches
+### 9.9.1 SuperMemo leeches
 
 SuperMemo insert. [What is SuperMemo?](https://supermemo.guru/wiki/What_is_SuperMemo%3F)
 
-Users of
-
- 
-
-SuperMemo
-
- 
-
-may recognize futile, persistent, or parasitic memories as
-
- 
-
-[leeches](https://supermemo.guru/wiki/Leech)
-
-. Nearly all beginners go through a stage when they discover that not all things are memorizable, and that some things can be memorized wrongly. Parasitic memories made this text pretty popular:
-
- 
-
-20 rules
-
-.
+Users of SuperMemo may recognize futile, persistent, or parasitic memories as [leeches](https://supermemo.guru/wiki/Leech). Nearly all beginners go through a stage when they discover that not all things are memorizable, and that some things can be memorized wrongly. Parasitic memories made this text pretty popular:20 rules.
 
 I have a unique insight into the problem of toxic memory. I have seen hundreds of user materials for learning with SuperMemo. Those materials usually contain a small proportion of questions that we call *leeches*. Those are the questions that are particularly hard to answer, mostly due to interference, or lack of meaningful connection with reality. I can see the birth of toxic memories in small incremental steps in the learning process. A little leech of a question can pester student's mind for months or even years. Without a resolute action undertaken, the student can see a question grow into a problem. At some point, the mere sight of the question will result in a jolt of a response: *Oh no! I will never remember that. Skip!*
 
@@ -183,45 +163,31 @@ Unwelcome memories are a norm in SuperMemo. It is never possible to fully predic
 
 The difference between a forgotten memory and a toxic memory in SuperMemo is that the first thing you remember about a toxic question is that you do not remember the answer
 
-### Inefficiency of SuperMemo
+### 9.9.2 Inefficiency of SuperMemo
 
 SuperMemo insert. [What is SuperMemo?](https://supermemo.guru/wiki/What_is_SuperMemo%3F)
 
 Ready-made collection were pretty popular in the 1990s. The problem with collections that are too difficult, or too easy, or not fully relevant, is that they emulate schooling. Like there is a mismatch of interest and readiness between a lecture and a student, it is easy to hit a mismatch between a SuperMemo collection and a student. Cramming material rarely brings good fruit. In case of SuperMemo, it may be doubly dangerous. The student who keeps cramming bad collections with dozen of hard items ([leeches](https://supermemo.guru/wiki/Leech)) will waste a lot of time on struggling with his own emotions and memory. Without fun, toxic memories can form, and the [love of learning](https://supermemo.guru/wiki/Pleasure_of_learning) can be undermined. In addition, there is an opportunity cost, the same student, instead of trying to hammer pesky leeches, might be spending the same time on an enjoyable learning. Instead of cramming English vocabulary, he might have fun with some English movie. Naturally, we believe there are still collections worth memorizing. For example, [Advanced English](https://supermemo.guru/wiki/Advanced_English) vocabulary is a must-have material for every speaker of English who dreams of native fluency. This is the common core of English that is hard to escape from. Enhancing this collection with snippets from a dictionary, own examples, pictures, or articles from Wikipedia should make it more fun. In other words, "common core" collections still make sense but they are best consumed interwoven into a colorful process of [incremental learning](https://supermemo.guru/wiki/Incremental_learning). In other words, the student should not be sentenced to lonely cramming of vocabulary. It should come in as part of a richer context of wide-ranging incremental learning
 
-### Toxic SuperMemo
+### 9.9.3 Toxic SuperMemo
 
 SuperMemo insert. [What is SuperMemo?](https://supermemo.guru/wiki/What_is_SuperMemo%3F)
 
 [SuperMemo](https://supermemo.guru/wiki/SuperMemo) is most dangerous when employed with little kids who have not developed long-term memory. In their case, the program becomes a perfect mental torture device. It quickly sends out easy items to long intervals and keeps bombarding the young brain with toughest questions. If there is no coercion involved, early SuperMemo is probably only a waste of time. However, all forms of knowledge-independent bribes and rewards can condition the kid to perceive [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition) as highly unpleasant. This can result in producing a SuperMemo dropout before the first voluntary repetition is made. For more see: [SuperMemo does not work for kids](https://supermemo.guru/wiki/SuperMemo_does_not_work_for_kids)
 
-### Toxic memories in language learning
+### 9.9.4 Toxic memories in language learning
 
 On occasion, an unwelcome memory connection may be established. For example, English words *indigent*and *indigenous* can easily be confused due to their similarity. If B is similar to C, at some point, A->C confusion may set in. There is a very simple tool for breaking up all unwelcome memories: forgetting. Unwelcome memory A->C is unlikely to be useful in natural contexts and will remain unused for a while until it dissolves naturally. However, if repeated drilling is enforced, e.g. at school or with [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition), the unwelcome memory may become a **parasitic memory**(i.e. unwelcome memory that would not go away). This phenomenon is one of the main reasons many users get discouraged in their use of spaced repetition. When used inappropriately, optimum review may optimally set in parasitic memories that can be very hard to eradicate. Programs like [SuperMemo](https://supermemo.guru/wiki/SuperMemo) can quickly establish long-term memories than can last month, or years or even a lifetime. If a parasitic memory is established, it can do more damage than just causing confusion via its falsehood.
 
 In the extreme case, parasitic memory can become a **toxic memory**. When a parasitic memory A->C is drilled regularly, it is likely to cause stress to the user via all forms of penalties. There will be one more memory connection established between the stimulus A and the penalty, which may be as trivial as a mild trigger of anxiety. Questions related to A will become punitive in nature. The student will gradually get conditioned to dislike learning. This can be a dislike of a particular portion of the learning material, or the whole domain (e.g. chemistry). In the most extreme case, toxic memories can lead to a dislike of learning in general. This happens all the time around the planet as a result of [schooling](https://supermemo.guru/wiki/Problem_of_schooling). Toxic memories are one of the prime reasons schooling does not work and [why kids hate school](https://supermemo.guru/wiki/Why_kids_hate_school%3F).
 
-### Toxic memories in Advanced English
+### 9.9.5 Toxic memories in Advanced English
 
 SuperMemo insert. [What is SuperMemo?](https://supermemo.guru/wiki/What_is_SuperMemo%3F)
 
-Advanced English
+Advanced English is a flagship SuperMemo
 
- 
-
-is a flagship
-
- 
-
-SuperMemo
-
-collection for memorizing English vocabulary. Over the years we have identified many toxic memory culprits that come from memory interference and pose a toxic memory risks. Here are some frequently confused word pairs where word similarity causes direct memory
-
- 
-
-interference
-
-, which is the first step towards toxicity:
+collection for memorizing English vocabulary. Over the years we have identified many toxic memory culprits that come from memory interference and pose a toxic memory risks. Here are some frequently confused word pairs where word similarity causes direct memory interference, which is the first step towards toxicity:
 
 - indigent - indigenous
 - fictitious - factitious
@@ -234,23 +200,9 @@ interference
 - perspicuous - perspicacious
 - an assent - an ascent
 
-Advanced English deals with those potentially toxic memories by placing both words in the question which becomes a discrimination task targeted at eliminating
+Advanced English deals with those potentially toxic memories by placing both words in the question which becomes a discrimination task targeted at eliminating interference. All those words are also memorized independently along the 20 rules of knowledge formulation
 
- 
-
-interference
-
-. All those words are also memorized independently along the
-
- 
-
-20 rules
-
- 
-
-of knowledge formulation
-
-### Toxic memories in incremental reading
+### 9.9.6 Toxic memories in incremental reading
 
 SuperMemo insert. [What is SuperMemo?](https://supermemo.guru/wiki/What_is_SuperMemo%3F)
 
