--- a/我再也不会把孩子送去学校/10.Why schools fail.md
+++ b/我再也不会把孩子送去学校/10.Why schools fail.md
@@ -1,12 +1,12 @@
-# Why schools fail?
+# 10 Why schools fail?
 
-## Summary of failure
+## 10.1 Summary of failure
 
 Schools fail because they disrespect and suppress basic learning, creativity, and problem solving mechanisms. For institutions responsible for fostering science, schools are egregiously ignorant of essential principles of how the brain works
 
 The degree of disrespect for child's health and well-being qualifies most schools as institutions of [legal child abuse](https://supermemo.guru/wiki/Education_as_a_human_right) (as long as they remain mandatory).
 
-## Path from knowledge to discovery
+## 10.2 Path from knowledge to discovery
 
 To understand the failure of schooling in a nutshell, it is helpful to track a golden nugget of knowledge from its source to its impact on a big discovery. This is the ABC of science that few seem to understand: not teachers, not principals, not education departments. There is an army of people who help pushing the grinding machine of youth. Those few voices who understand the process remain silenced or even [ridiculed](https://supermemo.guru/wiki/Abandon_early_math_instruction!).
 
@@ -20,13 +20,13 @@ Here is a short path of a great nugget of knowledge that can change the world:
 - **creativity cycle**: the nugget gains in power if it increases in [coherence](https://supermemo.guru/wiki/Coherence) by [generalization](https://supermemo.guru/wiki/Generalization), selective [forgetting](https://supermemo.guru/wiki/Forgetting), creative association, etc. Those processes require peace, creative wandering, thinking, [sleep](https://supermemo.guru/wiki/Sleep), and plenty of time. [All those components of mind growth](https://supermemo.guru/wiki/Natural_creativity_cycle) are suppressed in the chaos of the education system. Even [sleep](https://supermemo.guru/wiki/Science_of_sleep), the most essential component in question, is held in disrespect. In addition to those inherent design problems of the [Prussian system](https://supermemo.guru/wiki/Prussian_system), there are dozens of other factors that interfere with learning, e.g. [bullying](https://supermemo.guru/wiki/Bullying), drugs, authoritarian teachers, etc. For a richer list see: [Problem of schooling](https://supermemo.guru/wiki/Problem_of_schooling)
 - **problem solving**: finally, the nugget of knowledge can be employed in the process of problem solving. The education system focuses on consumption, provides little room for [creativity](https://supermemo.guru/wiki/Creativity), and little room for [genuine problem solving](https://supermemo.guru/wiki/How_to_solve_any_problem%3F) where novel problems are tackled with little external guidance, and without robotic regurgitation of well-known algorithms. **Finding dichotomies and making serial micro-decisions are part of a brain's repertoire of habits that underlie efficient problem solving. The education system suppresses the natural quest for autonomous decision making**
 
-## Schools abandon exploration
+## 10.3 Schools abandon exploration
 
 Efficient adaptation to the environment relies on an **exploration algorithm** developed in the course of evolution. The algorithm reached its acme in the human brain. It took half a billion years to develop. Modern education systems ignore that capital. [Education systems stand in the opposition to the marvelous gains of evolution](https://supermemo.guru/wiki/Education_counteracts_evolution).
 
 Efficient learning is based on the same exploration algorithm. To trace the golden nugget of knowledge, we started from the point of the encounter. However, the encounter itself is largely hindered by schooling. Efficient exploration occurs in natural environment, in [simulations](https://supermemo.guru/wiki/PhET_simulations), in [incremental reading](https://supermemo.guru/wiki/Incremental_reading), or in other forms of [free learning](https://supermemo.guru/wiki/Free_learning). Modern schools provide limited freedom and this undermines the exploration algorithm.
 
-## Schools hinder discovery
+## 10.4 Schools hinder discovery
 
 Most of mankind's problems are solved only after leaving the confines of schooling. Sometimes, when a great idea hits, a genius mind will drop out from school, and accomplish great things. I wish [Bill Gates never forgot what made him great](https://supermemo.guru/wiki/Bill_Gates_is_wrong_about_education).
 
