--- a/我再也不会把孩子送去学校/12.Natural creativity cycle.md
+++ b/我再也不会把孩子送去学校/12.Natural creativity cycle.md
@@ -1,8 +1,8 @@
-# Natural creativity cycle
+# 12 Natural creativity cycle
 
 Natural creativity cycle is a repetitive sequence of changes in knowledge stored in memory. Those changes are induced by learning, creative thinking, and [memory optimization in sleep](https://supermemo.guru/wiki/Memory_optimization_in_sleep). Those changes form a cycle rooted in the [circadian rhytm](https://supermemo.guru/wiki/Circadian_cycle).
 
-## Creativity formula
+## 12.1 Creativity formula
 
 Understanding the creativity cycle is essential for high creativity, good learning, and a happy mind. The following picture explains how the natural creativity cycle works. For details see the [Neural aspects of the creativity cycle](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Neural_aspects_of_the_creativity_cycle).
 
@@ -10,23 +10,23 @@ Understanding the creativity cycle is essential for high creativity, good learni
 
 > **\*Figure:** In the **natural creativity cycle** there is a regular interplay between the creative processes and the consolidation of knowledge. For high creativity and good learning, those processes must proceed unimpeded. Sleep must come naturally and should never be interrupted. Waking day should also have large blocks protected from interruption, multitasking, and stress. Starting with the **creative morning explosion**, seeds of activation (in red) get gradually converted into a **big idea** that emerges on the next morning. In the meantime, learning, reasoning, and creative activations reshuffle neuronal connections. New connections emerge, get strengthened, weakened, eliminated, or are consolidated for long term storage. All steps are essential for the emergence of the ultimate big idea. For details see: Neural aspects of the natural creativity cycle*
 
-## Natural creativity cycle
+## 12.2 Natural creativity cycle
 
 The **natural creativity cycle** is an interplay of neurological processes that occur [in waking and in sleep](https://supermemo.guru/wiki/Circadian_cycle). This natural cycle does not come with much advice that will boost your specific creativity. You only need to know that all creative people must protect the cycle from interference with drugs, distractions, or designer schedules that disrupt individual stages. The most delicate and the most often disrupted component of the cycle is sleep. Typical cycle violations would include morning alarm clock, evening alcohol, medication, or suppressing creativity with multitasking, stress, and disruptions.
 
 **To live up to your intellectual and creative potential, you should respect and protect the natural creativity cycle.**
 
-### Day
+### 12.2.1 Day
 
-#### Waking
+#### 12.2.1.1 Waking
 
 The cycle begins with natural waking after a full night of uninterrupted and unmedicated sleep. It is essential that [sleep occur in the optimum circadian framework](http://super-memory.com/articles/sleep.htm). In simplest terms, it means going to sleep when sleepy, waking up naturally, going to sleep daily in a similar time frame, and waking up at sunrise or after sunrise under the influence of natural sunlight.
 
-#### Morning creativity
+#### 12.2.1.2 Morning creativity
 
 In the natural cycle, for biological reasons, the [best brain performance occurs in the morning](https://supermemo.guru/wiki/Sleep_and_learning#Alertness_vs._learning). This is the time when new ideas start germinating and when best creative learning takes place. Creative learning differs from your typical learning in that the creative process may interfere with the learning process. This may slow down learning while increasing its quality and outcomes. In creative learning, you learn the subject matter and supplement that learning with your own creative enhancement. In other words, while reading a book, in creative learning, you learn the content of the book and what you invent about the book!
 
-#### Focus and creativity cycles
+#### 12.2.1.3 Focus and creativity cycles
 
 During the day, there will be two prime oscillations between the competing brain states of focus and creativity:
 
@@ -39,25 +39,25 @@ Creative and consolidation components of waking and sleep stand in procedural sy
 
 For example, an early morning brain, after a cup of coffee, might be buzzing with ideas in many areas of interest. However, once an important idea is hit, focused analysis will demand suppressing all other ideas to provide for "clear thinking" mode. The best lossless way for tackling the competition between ideas in creative mode is note taking. Depending on the brain and the context, ideas may be too precious to get lost by suppression with focused thinking. They should better be written down before working on them individually. Naturally, in a creative individual, the stream of ideas may be too rich to fully process, and a good balance between invention and implementation is necessary. The best way of achieving that balance is to supplement the brain with [incremental processing](https://supermemo.guru/wiki/Incremental_learning) tools, like [SuperMemo](https://supermemo.guru/wiki/SuperMemo). See: [Tools](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Tools).
 
-#### Siesta bonus
+#### 12.2.1.4 Siesta bonus
 
 Anyone who can afford a siesta should avail of the opportunity. Naptime sleep differs from nighttime sleep, however, it performs vital [homeostatic](https://supermemo.guru/wiki/Homeostatic)function that restores both learning capacity and creative capacity back to baseline. In essence, [biphasic lifestyle](https://supermemo.guru/wiki/Biphasic_life) with a [siesta component](https://supermemo.guru/wiki/Siesta) helps the brain execute two wake creativity sub-cycles in a single day. This is the **first siesta bonus** that can literally double the creative output of an individual.
 
 Due to the different nature of naptime sleep and its regulatory mechanisms, there are many unknowns in reference to the impact of napping on creativity. We are not sure if evening creativity is qualitatively different from morning creativity. All differences we see may equally well be explained by the change of context (e.g. morning creativity might occur in the office, while evening creativity takes place over a desk at home, there is a change in the impact of light, social life, exercise, disruption and more). As the creative process is highly unpredictable, the possibility of employing two different brain modes might be highly beneficial. This can theoretically provide the **second siesta bonus**: a [different creative mode](https://supermemo.guru/wiki/How_to_solve_any_problem%3F).
 
-### Sleep
+### 12.2.2 Sleep
 
 A creative individual does not need to understand what happens in sleep. Those processes are automatic and not fully understood. It is enough to stick to the healthy sleep regimen and the brain will take care of itself in sleep. However, the structure of sleep and the interplay of NREM-REM stages helps one understand the dangers of sleeping in wrong hours, using alarm clock, drinking alcohol before sleep, taking sleeping pills (incl. seemingly harmless melatonin), etc.
 
-#### NREM sleep
+#### 12.2.2.1 NREM sleep
 
 Sleep begins with a gradual descent into deep sleep. The actual play of neural circuits in that stage is still be be elucidated. There are many competing models, however, a consensus seems to emerge that NREM sleep is the stage when [memories are consolidated for long-term storage in cortical areas](http://super-memory.com/articles/sleep.htm#NREM_and_memory). This frees working memory structures, such as the hippocampus, for more learning while awake. Without this sleep stage, declarative learning is impeded. This means that in severe sleep deprivation, the things we learned and figured out during the day may become volatile and lost in part or entirely.
 
-#### REM sleep
+#### 12.2.2.2 REM sleep
 
 REM sleep is a type of sleep that starts dominating later in the night. This might be the most under-appreciated component of the natural creativity cycle. This is the type of sleep when the brain [teaches itself](http://super-memory.com/articles/sleep.htm#REM_as_a_form_of_neural_training) of what it knows with the purpose of optimizing, simplifying, and generalizing knowledge. In simple terms, after REM sleep, the things we know, we start knowing better, and as a result, we start noticing new relationships in knowledge. This reshuffling of knowledge makes it possible to invent in sleep without lifting a finger. The whole process is automatic. All we need to do is sleep. We do not even need to go to sleep with the intention of inventing. It will happen whether we wish or not.
 
-#### Nighttime inventions
+#### 12.2.2.3 Nighttime inventions
 
 We commit two mortal sins that destroy brain's ability to come up with new ideas in sleep:
 
@@ -70,7 +70,7 @@ Natural creativity cycle can easily lose most of its potency by our interference
 
 See: [How to solve any problem?](https://supermemo.guru/wiki/How_to_solve_any_problem%3F)
 
-## Neural aspects of the creativity cycle
+## 12.3 Neural aspects of the creativity cycle
 
 This picture presents the progression of the creativity cycle in neural terms. In the diagram, dots represent memories or concepts. Connections between the dots represent associations (between memories or concepts). Memories and connections are first formed or activated in red in the process of learning or spontaneous creativity. In successive octants of the diagram, memories and connections can get weakened or consolidated. Darker and thicker connections are most stable and most durable. The picture shows how, in a single cycle of day and night, a new big idea emerges. New connections may form via deterministic inference (thinking), or via random activations typical of creativity or REM sleep.
 
@@ -78,7 +78,7 @@ The same idea may be represented by a different set of neurons in a different pa
 
 [![Natural creativity cycle](https://supermemo.guru/images/thumb/8/8c/Natural_creativity_cycle.png/600px-Natural_creativity_cycle.png)](https://supermemo.guru/wiki/File:Natural_creativity_cycle.png)
 
-### Waking Day
+### 12.3.1 Waking Day
 
 **Octant 1: Morning creative explosion:** The day in a natural cycle begins with a creative explosion. The semantic tree of knowledge gets expanded in a highly unpredictable manner. The most important part of that process is random activation of concept neurons associated with ideas. On a good day, the brain should be buzzing with ideas related to one's work, or ideas irrelevant. A cup of coffee can enhance this process. Good mood is also essential as it allows of unconstrained creativity. Modern scourges of [bad sleep](https://supermemo.guru/wiki/Good_sleep), [stress](https://supermemo.guru/wiki/Stress), and haste are prime enemies of morning creativity. In the picture, the underlying existing knowledge tree is not shown. Only new foci of activity are shown in red. New associations are shown as links between activation centers (edges to the knowledge graph).
 
@@ -86,7 +86,7 @@ The same idea may be represented by a different set of neurons in a different pa
 
 **Octants 3-4** will mirror Octants 1-2 in individuals who take a recommended mid-day nap. Naps bring the homeostatic learning capacity back to the baseline. In other words, well executed naps eliminate the network fatigue effect. Biphasic sleepers benefit of maximum creativity, alertness and learning performance in two octants in a single cycle: Octant 1 and Octant 3. In monophasic sleepers, the evening creative mode is undermined by network fatigue, and most of the improved alertness and learning capacity comes from the [impact of circadian variables on the brain](http://super-memory.com/articles/sleep.htm#Monophasic_sleep_with_biphasic_learning). Even if you do not sleep at siesta time, the brain experiences an evening revival after the mid-day slump. The picture assumes that siesta has restored the full creative mode and the main difference between Octant 1 and Octant 3 is that, in the evening, the period of prolific creativity will build upon newly formed structures of knowledge inherited from the first half of the waking day.
 
-### Night
+### 12.3.2 Night
 
 **Octant 5: NREM sleep:** Memories get consolidated in the neocortex. The picture does not reflect the fact that the same connections between concepts may move from the switchboard (hippocampus) to permanent storage (neocortex). Octants 4 and 5 may look the same, but the networks of connections may change their location in the brain. The whole fabric of knowledge becomes stable, consolidated, and gets a ticket on its way to longevity. Memories settled in the cortex will get more and more stable with each review.
 
@@ -96,7 +96,7 @@ The same idea may be represented by a different set of neurons in a different pa
 
 **Octant 8 REM:** Last part of the night might be most prolific in terms of creativity. This is the time when most of obligatory consolidation and memory transfer has already occurred. This is the time the brain is allowed to play with existing memories and look for patterns and generalizations that crystallize ideas and provide new insights in problems to be solved in waking.
 
-### Next morning
+### 12.3.3 Next morning
 
 Finally, back in **Octant 1**, we wake up with a big idea.
 
@@ -106,7 +106,7 @@ For the sake of creativity, if only possible, we should go to sleep when sleepy,
 
 The presented picture had three contributors, and their zodiac constellations have been used to assemble the representation of the ultimate big morning idea. You can now follow individual octants to get a general sense how that big idea came to be: starting with a creative chaos of the early morning, focused reasoning, further layers of creative enhancement, nighttime consolidation and comparison with existing memories, nighttime optimization, and nighttime creative expansion via random pattern generation.
 
-## Depression and positive thinking
+## 12.4 Depression and positive thinking
 
 Nighttime [creativity](https://supermemo.guru/wiki/Creativity) is an anti-depressant. This is not only a matter of neurohormones. You can go to sleep with a gnawing problem only to wake up with a solution. If the problem is unsolvable, you might creatively come up with an optimistic interpretation, or, at the very least, with a stoic interpretation. This can happen only if you obey the creativity cycle and ensure perfect [circadian alignment](https://supermemo.guru/wiki/Circadian_alignment) of nighttime sleep. Departures from optimum sleep timing can [trigger depression](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2612129/).
 
@@ -120,7 +120,7 @@ In addition to its impact on re-balancing brain hormones, sleep has a very impor
 
 This nighttime creative search for positive interpretation is why we say we like to sleep over the worries and take a new look in the morning. This is how we employ brain hormones and creativity to see the world in better colors. Those who neglect sleep, deprive themselves of the chief weapon that might help them improve their mood.
 
-## Creative cycle control
+## 12.5 Creative cycle control
 
 The control of the natural creativity cycle is determined by (1) [learn drive](https://supermemo.guru/wiki/Learn_drive), (2) [sleep drive](http://super-memory.com/articles/sleep.htm#Sleep-wake_flip-flop), (3) [dream drive](http://super-memory.com/articles/sleep.htm#REM_flip-flop), (4) local neural network control, and (5) systemic neurohormonal control.
 
@@ -141,7 +141,7 @@ All the control components of the natural creativity cycle, if undisturbed, prov
 
 All those goals are achieved using a mass of tissue that takes just 1-2% of the weight of the human body. Human brain is a true miracle of biological evolution. All its asks is a bit of energy to run it and respect for its control mechanisms.
 
-## Impact of schooling
+## 12.6 Impact of schooling
 
 Schooling totally destroys the natural creativity cycle in a vast majority of students. There are very few exceptions of kids who are natural early risers, love school, love their teachers, are gifted, love winning, are lucky to attend good schools with good programs and a great degree of freedom, whose parents are tolerant and helpful, and who can manage their evening schedule to their own liking. In my circles, this is extremely rare, perhaps as rare as 1:100. The average is bleak. Kids have no mental power left for their own learning. Their favorite low-brain-energy pastimes range from [computer games](https://supermemo.guru/wiki/Videogames) through music to messing around with friends. Many kids are saved from utter decline by spending long hours in the football field, skatepark, street workout, or on a basketball court. Evenings are devoted to surfing the web, Facebook, YouTube, gaming, and other undemanding forms of cognitive effort.
 
@@ -149,7 +149,7 @@ The biggest offender in the destruction of the creativity cycle is the [alarm cl
 
 **For a typical school kid, learn drive is supplanted with teaching-and-homework, creativity is largely absent, and sleep is injured**
 
-## Employing the creativity cycle
+## 12.7 Employing the creativity cycle
 
 If you ever experience a writer's block or wait in vain for inspiration or your artistic muse to come, note that natural creativity cycle, health permitting, makes it possible to experience high creativity on a daily basis. All you need is to understand individual steps and timing. If you look for high creativity in the evening after a hard day's work, you are less likely to find it. Don't mistake high passion and high focus for creativity. Passionate focus is easier to come by even in a tired brain. Kids can do their homework ok in the evening, however, they will never expand creatively on what they get fed in with from textbooks. Their brain will not build new layers of knowledge and understanding. Those extra layers and connections are vital for knowledge to last and expand. Creativity determines the ultimate representation of knowledge at the cortical level. That representation determines how abstract and how applicable knowledge is. In short, without solid creative generalizations, we know things, but we are not that much smarter as a result. In passive learning, the brain is like Google, full of information and short on wisdom. All it takes to make a difference is to employ the post-sleep high creativity stages in learning. In simplest terms, learning on a fresh brain is the only highly efficient form of learning.
 
@@ -157,7 +157,7 @@ If you ever experience a writer's block or wait in vain for inspiration or your 
 
 **Respect for the natural creativity cycle makes it easy to reproduce high learning and high creativity on a daily basis.**
 
-## Old school: creativity cycles
+## 12.8 Old school: creativity cycles
 
 Understanding the **natural creativity cycle** is essential for productive brainwork and creativity. The web is populated with hundreds of articles about the "*creativity cycle*". Those articles explain what steps need to be taken to maximize creativity. The problem with a typical "*creativity cycle*" is that it has been artificially concocted by creativity "experts" who provide a rigid formula for decomposing the process into well-delineated stages such as *preparation*, *analysis*, *creativity*, *development*, *implementation*, etc.
 
@@ -179,27 +179,17 @@ You can use "project cycle" stages, if you find them helpful, or you can just im
 
 See also: [How to solve any problem?](https://supermemo.guru/wiki/How_to_solve_any_problem%3F)
 
-## Tools
+## 12.9 Tools
 
-### Learning
+### 12.9.1 Learning
 
 One good artificial prop in the natural creativity cycle is the proverbial pen and paper, i.e. any means for extending human memory by making notes. I favor notes made in [SuperMemo](https://supermemo.guru/wiki/SuperMemo). They are best made in a collection dedicated to a specific problem that is to be solved. Later on, those notes can enter the process of [incremental reading](https://supermemo.guru/wiki/Incremental_reading) and propel the natural interplay of focus and creativity in learning.
 
-### Incremental reading
+### 12.9.2 Incremental reading
 
 SuperMemo insert. [What is SuperMemo?](https://supermemo.guru/wiki/What_is_SuperMemo%3F)
 
-Incremental learning
-
- 
-
-has been created to naturally support the creativity cycle in stages powered by the
-
- 
-
-learn drive
-
-. High load of learning and creative learning provide for rich processing material for the stages powered by the dream drive.
+Incremental learning has been created to naturally support the creativity cycle in stages powered by the learn drive. High load of learning and creative learning provide for rich processing material for the stages powered by the dream drive.
 
 Oscillations and transient transitions between focused/analytical and creative/exploratory work are naturally supported by tools that make the learning process incremental, intermittent, interruptible, and dendritic. This means that the student is in full control of the learning pace. This allows of free semantic digressions into multiple branches of knowledge.
 
@@ -213,23 +203,9 @@ Incremental learning is a good computer metaphor for how the creative processes 
 
 Nobody has ever measured the impact of incremental learning on neurogenesis, but I boldly hypothesize that if there are any control mechanisms that we might influence, they would be definitely associated with the neural activity and restorative processes. This would mean that rich learning and creative thought combined with healthy regimen of sleep would provide the basis of the desirable effect on the brain.
 
-The
+The present article was written using incremental writing. Incremental writing is a technique, in which learning, creative thinking, and writing become integrated into a continuous incremental learning process. In incremental writing, one can employ a form of "project cycle": (1) information gathering, (2) writing and expansion, (3) clean up and elimination, and (4) publishing. All those stages require creativity and should not be confused with the creativity cycle.
 
- 
-
-present article
-
- 
-
-was written using
-
- 
-
-incremental writing
-
-. Incremental writing is a technique, in which learning, creative thinking, and writing become integrated into a continuous incremental learning process. In incremental writing, one can employ a form of "project cycle": (1) information gathering, (2) writing and expansion, (3) clean up and elimination, and (4) publishing. All those stages require creativity and should not be confused with the creativity cycle.
-
-### SleepChart
+### 12.9.3 SleepChart
 
 [SleepChart](https://supermemo.guru/wiki/SleepChart) in [SuperMemo](https://supermemo.guru/wiki/SuperMemo) makes it easy to [optimize the timing of brainwork](https://supermemo.guru/wiki/Optimizing_the_timing_of_brainwork):
 
@@ -237,7 +213,7 @@ incremental writing
 
 > **\*Figure: Optimizing the timing of brainwork with respect to the circadian cycle.** This exemplary graph was generated with the help of SleepChart on the basis of 3-year-long daily measurements of a free-running sleep rhythm. The horizontal axis expresses the number of hours from awakening (note that the free running rhythm period is often longer than 24 hours). Light blue dots are actual sleep episode measurements with timing on the horizontal, and the length on the left vertical axis. **Homeostatic** sleepiness can roughly be expressed as the **ability to initiate sleep**. Percent of the initiated sleep episodes is painted as a thick blue line (right-side calibrations of the vertical axis). Adenosine-related homeostatic sleep propensity increases in proportion to mental effort and can be partially cleared by caffeine, stress, etc. **Circadian** sleepiness can roughly be expressed as **the ability to maintain sleep**. Average length of initiated sleep episodes is painted as a thick red line (left-side calibrations of the vertical axis). Mid-day slump in alertness is also circadian, but is biologically different and results in short sleep that does not register as red sleep maintenance peak. **Sleep maintenance** circadian component correlates (1) negatively with temperature, ACTH, cortisol, catecholamines, and (2) positively with: melatonin and REM sleep propensity. Optimum timing of brainwork requires both low homeostatic and circadian sleepiness. There are two quality alertness blocks during the day: first after the awakening and second after the siesta. Both are marked yellow in the graph. For best learning and best creative results use these yellow blocks. Caffeine can only be used to enhance alertness early in this optimum window (brown). Later use will affect sleep (caffeine half-life is about six hours). Optimum timing of exercise is not marked as it may vary depending on the optimum timing of zeitgebers (e.g. early morning for DSPS people and evening for ASPS people). For more details see: Biphasic nature of human sleep.*
 
-## Summary: Natural creativity cycle
+## 12.10 Summary: Natural creativity cycle
 
 - adherence to the natural creativity cycle is vital for achieving high creativity on a regular basis
 - efficient problem solving is not possible without adherence to the natural creativity cycle
