--- a/我再也不会把孩子送去学校/14.Baby management.md
+++ b/我再也不会把孩子送去学校/14.Baby management.md
@@ -1,6 +1,6 @@
-# Baby management
+# 14 Baby management
 
-## Rich learning
+## 14.1 Rich learning
 
 Pediatricians often call babies perfect learning machines, however, memory in early childhood is actually awful (see: [How baby brain does not work](https://supermemo.guru/wiki/How_baby_brain_does_not_work)).
 
@@ -8,7 +8,7 @@ In terms of motor skills, a 3 year-old is almost a complete human being. In term
 
 It is true that the brain proceeds with explosive development in the first years of life. Development does not necessarily need to equate with learning. Sometimes it is just unsophisticated growth and structure remoulding. However, it is good to always remember development is guided by early experience. That early experience shapes the character, procedural capacity, pattern recognition, skills, and other aspects of brain "personality". Thinking of a child brain as a learning machine is good when it comes to ensuring the exposure to experience. Sometimes we call it stimulation. Stimulation is good as long as we do not forget that overstimulation is also possible. For example, night time is time for sleep, not for stimulation. A brain tired with one type of stimulation will do better with a change in stimulation or just a break from exciting stimuli. There is an optimum exposure to stimulation and there is a very simple strategy for making sure the kid gets just as much stimulation as it needs: let the kid decide herself! All the parent needs to do is to provide necessary freedoms and follow natural cravings.
 
-## Micromanaging baby development
+## 14.2 Micromanaging baby development
 
 With all the talk of early stimulation or early education, we seem to have already designed baby life to suit adult needs. Instead of ensuring optimum environment for development, we package babies for easy handling. It all begins in pregnancy. The delivery itself is often initiated with a volley of drugs. If the mom's body refuses to obey orders, it is pumped with more drugs. Some of those attempt to make the procedure comfortable, e.g. painkillers. Others are supposed to make it expedient, e.g. oxytocin. More and more moms and doctors take an easy way out: a C-section. There are many consequences of this chemical, hormonal, and mechanical intervention. Some of these may still be unknown or not fully understood. Some consequences may last a lifetime!
 
@@ -16,7 +16,7 @@ Herein begins a life destined for micromanagement and convenient design. Visit a
 
 Soon we package babies in **cages on wheels**, affectionately called perambulators. Those contraptions have been invented in the 18th century and we slowly start forgetting how original baby transport should look like. We can only take our inspiration from primitive tribes and other primates that simply carry babies around in their arms. It seems baby carriers are the most natural safe modern replacement. I am not sure if they would get orthopedic approval for their straight-jacket nature, however, I am sure they are the best option for the developing brain at very least. A baby in a carrier can see the world around it. It has untold benefits for its ability to recognize 3D patterns, esp. in combination with head mobility. Instead, in a pram, all a baby can see is a rolling flat skyline with occasional attractions in the shape of a tree branches and street lamps. A new trend of [babywearing](https://en.wikipedia.org/wiki/Babywearing) might be the right way to satisfy the perfect learning machine in terms of baby transport. The only time I am happy about prams is when see those brave grannies linger out for 6 hours in a frosty weather with a sleeping baby. In there, I see sound sleep and those brain cells proliferating right in front of our eyes.
 
-## Caging toddlers
+## 14.3 Caging toddlers
 
 At toddlerhood, the list of restrictions and baby-proofing keeps increasing. All imaginable devices are supposed to keep toddlers safe, while supervised exposure to dangerous contexts is the best long-term protection. In the end, while parents are busy with their own lives, **kids are safe, but learn nothing about safety**. There are endless protections from bacteria, viruses, parasites, animals, allergens, plants, and dirt. This cripples the developing immune system and causes life-long health problems that also undermine cognitive development. While daycare is said to be a good proving ground for the immune system, it usually ends up undermining child's long term development (see: [Daycare infections](https://supermemo.guru/wiki/Daycare_infections)). Similar myths related to [learning acceleration](https://supermemo.guru/wiki/Learning_acceleration_via_stress) may have adverse effects on brain growth.
 
@@ -36,11 +36,11 @@ Then there is a perfect conformist metaphor: baby dummy. A tool with a dozen of 
 
 > **\*Figure:** Baby dummy as a shut up metaphor.*
 
-## Parental crime #1
+## 14.4 Parental crime #1
 
 Some kids get sent to daycare in their first months of life. This often necessitates the enforcement of the obligatory **wake up time**. This sets a kid on a long-lasting brain-limiting habit of waking up against the demands of the body clock. Some kids [never recover](https://supermemo.guru/wiki/War_of_the_networks) from that waking ritual, which may extend for decades. Their [circadian control system](https://supermemo.guru/wiki/Brain_map) gets permanently damaged leading to lifelong sleep disorders that affect the well-being of the population. For more see: [Science of sleep](https://supermemo.guru/wiki/Science_of_sleep)
 
-## Preschool drills
+## 14.5 Preschool drills
 
 For preschool, there is a perfect torture device: multi-seat toddler desk where kids are mounted and immobilized inside a single semi-circular desk, with high backseats that ensure face orientation towards the "teacher". This is an perfect anti-[ADHD](https://supermemo.guru/wiki/ADHD) device. Fidgeting, head movement, and own interests are considered a bad thing.
 
@@ -48,13 +48,13 @@ For preschool, there is a perfect torture device: multi-seat toddler desk where 
 
 > **\*Figure:** Multi-seat toddler desk is a preschool torture device. The brain says "keep exploring". The authoritarian teacher says "Stop moving! Read my lips!". For more see: Would you have a heart to cage a puppy?*
 
-## Exposure is good
+## 14.6 Exposure is good
 
 In the end, it is good to look at babies as perfect learning machines. Their development is guided by the exposure to environmental stimuli and we need to be constantly aware not to cut off those natural inputs.
 
 Now back to that perfect learning. Science of memory will tell you it is far from perfect, and we need to take a major correction for that in educational strategies. See: [How baby brain does not work](https://supermemo.guru/wiki/How_baby_brain_does_not_work).
 
-## Summary: Baby management
+## 14.7 Summary: Baby management
 
 - modern baby "management" results in harmful restrictions in the exposure to healthy natural stimuli
 - moderate exposure to pathogens and allergens is vital for the health of the immune system
