--- a/我再也不会把孩子送去学校/20.Why kids hate school.md
+++ b/我再也不会把孩子送去学校/20.Why kids hate school.md
@@ -1,12 +1,12 @@
-# Why kids hate school?
+# 20 Why kids hate school?
 
-## Experts confirm: kids don't like school
+## 20.1 Experts confirm: kids don't like school
 
 It was back in 1964 when rebellious educator [John Holt](https://supermemo.guru/wiki/John_Holt), in his book "*How Children Fail*", noticed that the school system is a major contributor to academic failure. Since then, relatively little has changed. [Homeschooling](https://supermemo.guru/wiki/Homeschooling) is now more popular in the US. Parental rights in reference to schooling have improved in many legislations. However, there are also major setbacks. Most of them are a side effect of the accelerated drive for "better" education across the world. The industrial manufacture of educated masses has grown in scale.
 
 Psychologist [Daniel Willingham](https://en.wikipedia.org/wiki/Daniel_T._Willingham) wrote a book "*Why Don't Students Like School*". In the book, he criticized teaching methods, which do not account for cognitive needs and abilities of children. Another notable psychologist [Peter Gray](https://supermemo.guru/wiki/Peter_Gray) was [quite upset](https://supermemo.guru/wiki/Gray_about_Willingham) with the fact that the book did not get to the core of the problem. According to Dr Gray, kids hate school for it limits child freedoms. Gray does not hesitate to say "*school is prison*".
 
-## My own investigation
+## 20.2 My own investigation
 
 Obviously, both Willingham and [Gray](https://supermemo.guru/wiki/Peter_Gray) are right. However, I decided to do a bit of research of my own. I decided to list all the most prominent school pains. Interviewing kids seemed like the best way to go. Before writing this article, in summer 2016, **I talked to some two hundred kids of all ages** (and many more since). This painted for me a pretty solid picture. Kids dislike or hate school almost universally. The older they are, the stronger the feeling.
 
@@ -16,7 +16,7 @@ In the process of collecting opinions, I also spoke to adults. Amazingly, the en
 
 As for [distorted memories](https://supermemo.guru/wiki/How_are_false_memories_born%3F), this is my field of expertise. Therefore I made an honest evaluation of my own feelings about my own experience at schools. The verdict is simple: school memories are a constellation of love and hate and all shades in between. Anyone who says "*I loved school*" or "*I hated school*" must be making a gross generalization that is largely justified by the distortive and generalizing power of the human brain. This is why live interviews with kids about their feeling "*at the moment*" are so precious. Interview honesty is vital. This is why I picked kids mostly from a circle of friends. Those who I approached as a stranger were hesitant or literally afraid to admit they dislike school! As if it was a thing we should not say loud. Kids are pressured and conditioned to say loudly that "*school is good*". Disliking school is supposed to be a reason to be ashamed or condemned. Only when kids find me as their ally, they admit the truth: "*school is prison*".
 
-## Top 11: What kids hate most about school
+## 20.3 Top 11: What kids hate most about school
 
 I put primary kid gripes into the following categories prioritized from the worst to the least significant. Every kid has his or her own list. My bullets should be considered an "average". This is what kids hate most about school:
 
@@ -48,13 +48,13 @@ School makes me wanna die
 
 > **Figure:** An article at [Free Thought Project](http://thefreethoughtproject.com/google-results-school-makes-search-reveal-disturbing-problem-public-education/) revealed a Google autocomplete propositions for "*school makes me*" (originally posted at [Homeschooling / Unschooling Facebook page](https://www.facebook.com/homeschoolingunschooling/photos/a.221837727864433.46751.181154285266111/1600940536620805/?type=3&theater)). I know that kids hate school, but the list in the search box was still striking. The school makes kids feel, I quote literally: *depressed, suicidal, anxious, stupid, sick, tired, sad, and stressed*. The negative vibe of that list defies belief, so I repeated the search myself and found only minor differences: *wanna die, wanna cry, wanna cut, and wanna give up*. There wasn't a single positive proposition like *school makes me learn with pleasure*, *school makes me smart/educated*, or *school helps me meet nice people*, or so. In case you think that people google only for solutions to problems, you will notice that the same experiment for *jogging* or *exercise* will likely produce suggestions such as *jogging makes me happy* or *exercise raises my endorphins*
 
-## Why kids like school?
+## 20.4 Why kids like school?
 
 For balance, let's consider why kids like school. Nearly all teens hate school, but some would say they like school conditionally.
 
 For example "*I hate school, but I love to meet my friends there*". Or, "*I hate school, but I love physical education*". Or "*I love German, but I hate English*".
 
-### Freddy
+### 20.4.1 Freddy
 
 I found just one case of a kid with a genuine liking for school. Freddy is 11 years old. He comes from a very well regulated family. There is no TV at home. Freddy and his siblings all started reading early. There was no distraction from YouTube or [videogames](https://supermemo.guru/wiki/Videogames). There were regular bedtime stories with his mom and dad.
 
@@ -69,7 +69,7 @@ In the chapter on [traps awaiting good students](https://supermemo.guru/wiki/Dan
 - he hates losing. His competitive nature helps him at school
 - he hates comparisons with other kids (other than winning competitions). During one of my "interrogations", he lost patience with me. I was too inquisitive
 
-### Arian
+### 20.4.2 Arian
 
 Arian is 16 years old. I have known her since she was in diapers. When she was 11, she was a smiling, happy, precocious, and cocky girl. I spoke to Arian about homeschooling. She insisted she would not like to be homeschooled because school is "*so marvellous*". She literally tried to argue with an old memory expert: "*You are wrong! I learn a lot from school*". However, things took a dramatic turn when Arian graduated from her 6-year primary school and moved to a middle school. There she encountered the problem of [bullying](https://supermemo.guru/wiki/Bullying). Amazingly, part of that bullying came from good students who wanted to play better "game of school" (the concept first criticized by Holt). Bullying sparked truancy, problems with grades, and the escalation of bullying spiral. Bad grades, in turn, caused frictions at home. At the age of 14, on Oct 17, 2013, Arian ran from home! For full four days, her parents and five siblings lived in horror. Police suspected kidnapping. The equivalent of orange alert was raised and countrywide search was undertaken. In the meantime, I tried to be helpful and talk to her friends about possible problems at school. I came back to her parents with "good news": someone mentioned that she was fed up with school and the atmosphere at home and that she would be a likely runaway. She also cut her hair short on the day of disappearance. In parallel, that hypothesis was confirmed by police by tracking her phone activity, and locating her friend Nina who confirmed Arian was alive and well. She was also seen boarding a train. Within 24 hours, on Oct 21, 2013, Arian was detained in a remote city of Torun and returned home with apologies. Her father attributed 80% of the blame to the school (incl. inattentive or passive teachers). Arian put that number lower. Her mom enrolled her in a different school. Two years later, she was doing well at home, and ok at school. She participated in beta-testing of one of the SuperMemos showcasing her smarts and potential. However, she also joined her teen crowd in the hate of schooling. She had nothing good to say about her new school experience. I urged her to try for college, however, in 2016, she was sent to a reform school in Warsaw. Her future is unclear. She praises her reform school for the rigor and discipline that helps her organize her life, however, when I mentioned [democratic schools](https://supermemo.guru/wiki/Democratic_school), she instantly changed her mind: *I would love this kind of freedom!*.
 
@@ -95,7 +95,7 @@ DSPS
 
 that set me on the life-long boycott of alarm clocks and getting up early. I would rather miss the class and suffer the consequences
 
-## Summary: Why kids hate school
+## 20.5 Summary: Why kids hate school
 
 - loss of freedom and excess work are a frequent reason for school hate
 - lack of motivation and low [learn drive](https://supermemo.guru/wiki/Learn_drive) make school an unpleasant experience for most kids
