--- a/我再也不会把孩子送去学校/22.Glossary.md
+++ b/我再也不会把孩子送去学校/22.Glossary.md
@@ -1,4 +1,4 @@
-# Glossary
+# 22 Glossary
 
 This terminology is used in [my](https://supermemo.guru/wiki/Piotr_Wozniak) articles on [education](https://supermemo.guru/wiki/Problem_of_Schooling), [sleep](https://supermemo.guru/wiki/Science_of_sleep), and [creatvity](https://supermemo.guru/wiki/Natural_creativity_cycle)(some of this terminology is my own):
 
