--- a/我再也不会把孩子送去学校/24.Further reading.md
+++ b/我再也不会把孩子送去学校/24.Further reading.md
@@ -1,3 +1,3 @@
-# Further reading
+# 24 Further reading
 
 Some chapters have not been integrated with the printable version. See: [Full list of chapters](https://supermemo.guru/wiki/Problem_of_Schooling#Chapters)
